Use the DecimalFormatter from SkillCommand
Why didn't I do this in the first place..

--- a/src/main/resources/locale/locale_cs_CZ.properties
+++ b/src/main/resources/locale/locale_cs_CZ.properties
@@ -1,6 +1,6 @@
 Acrobatics.Ability.Proc=[[GREEN]]**Elegantni pristani**
 Acrobatics.Combat.Proc=[[GREEN]]**Uskocil jsi**
-Acrobatics.DodgeChance=[[RED]]Dodge Chance: [[YELLOW]]{0}%
+Acrobatics.DodgeChance=[[RED]]Dodge Chance: [[YELLOW]]{0}
 Acrobatics.Effect.0=Valeni
 Acrobatics.Effect.1=Redukuje nebo ru\u0161\u00ed zran\u011bn\u00ed zp\u016fsoben\u00e9 p\u00e1dem
 Acrobatics.Effect.2=\u0160\u0165astn\u00fd kotoul
@@ -8,13 +8,13 @@ Acrobatics.Effect.3=Dvojt\u00e1 effectivita ne\u017e norm\u00e1ln\u00ed
 Acrobatics.Effect.4=\u00dahyb
 Acrobatics.Effect.5=Sn\u00ed\u017een\u00e9 zran\u011bn\u00ed o polovinu
 Acrobatics.Listener=Akrobacie:
-Acrobatics.Roll.Chance=[[RED]]Roll Chance: [[YELLOW]]{0}%
-Acrobatics.Roll.GraceChance=[[RED]]Graceful Roll Chance: [[YELLOW]]{0}%
+Acrobatics.Roll.Chance=[[RED]]Roll Chance: [[YELLOW]]{0}
+Acrobatics.Roll.GraceChance=[[RED]]Graceful Roll Chance: [[YELLOW]]{0}
 Acrobatics.Roll.Text=**Valis se**
 Acrobatics.SkillName=AKROBACIE
 Acrobatics.Skillup=[[YELLOW]]Dovednost akrobacie byla navysena o {0}. Celkem ({1})
-Archery.Combat.DazeChance=[[RED]]Chance to Daze: [[YELLOW]]{0}%
-Archery.Combat.RetrieveChance=[[RED]]Sance na obnovu sipu: [[YELLOW]]{0}%
+Archery.Combat.DazeChance=[[RED]]Chance to Daze: [[YELLOW]]{0}
+Archery.Combat.RetrieveChance=[[RED]]Sance na obnovu sipu: [[YELLOW]]{0}
 Archery.Combat.SkillshotBonus=[[RED]]Bonusov\u00e9 zran\u011bn\u00ed p\u0159esn\u00e9 trefy: [[YELLOW]]{0}
 Archery.Effect.0=P\u0159esn\u00e1 trefa
 Archery.Effect.1=Zv\u00fd\u0161en\u00e9 po\u0161kozen\u00ed lukem
@@ -35,7 +35,7 @@ Axes.Ability.Lower=[[GRAY]]**ODLOZIL JSI SVOU SEKERU**
 Axes.Ability.Ready=[[GREEN]]**P\u0158IPRAVUJE\u0160 SI SVOJ\u00cd SEKERU!**
 Axes.Combat.Cleave.Proc=[[DARK_RED]]Zas\u00e1hnut ROZ\u0160T\u00cdPNUT\u00cdM!
 Axes.Combat.CritStruck=[[DARK_RED]]Byl jsi KRITICKY zasazen!
-Axes.Combat.CritChance=[[RED]]Sance na kriticky uder: [[YELLOW]]{0}%
+Axes.Combat.CritChance=[[RED]]Sance na kriticky uder: [[YELLOW]]{0}
 Axes.Combat.CriticalHit=[[RED]]KRITICK\u00dd Z\u00c1SAH!
 Axes.Combat.GI.Proc=[[GREEN]]**\u00daDER VELKOU SILOU**
 Axes.Combat.GI.Struck=[[RED]]**ZASAZENI S VYSSIM UCINKEM**
@@ -76,7 +76,7 @@ Excavation.Skillup=[[YELLOW]]Dovednost v kopani byla navysena o {0}. Celkem ({1}
 Fishing.Ability.Info=[[RED]]Magick\u00fd lovec: [[GRAY]] **Zvy\u0161uje se s dovednost\u00ed Lovec poklad\u016f**
 Fishing.Ability.Locked.0=LOCKED UNTIL {0}+ SKILL (SHAKE)
 Fishing.Ability.Rank=[[RED]]Lovec Poklad\u016f Level: [[YELLOW]]{0}/5
-Fishing.Ability.Shake=[[RED]]Shake Chance: [[YELLOW]]{0}%
+Fishing.Ability.Shake=[[RED]]Shake Chance: [[YELLOW]]{0}
 Fishing.Ability.FD=[[RED]]Fisherman\'\'s Diet: [[YELLOW]]Rank {0}
 Fishing.Effect.0=Lovec pokladu (pasivni)
 Fishing.Effect.1=Fish up misc. objects
@@ -92,10 +92,10 @@ Fishing.Listener=Rybareni:
 Fishing.MagicFound=[[GRAY]]C\u00edt\u00edte dotek magie s t\u00edmto \u00falovkem...
 Fishing.SkillName=RYBARENI
 Fishing.Skillup=[[YELLOW]]Dovednost v rybareni byla navysena o {0}. Celkem ({1})
-Herbalism.Ability.DoubleDropChance=[[RED]]Sance na dvojity zisk: [[YELLOW]]{0}%
+Herbalism.Ability.DoubleDropChance=[[RED]]Sance na dvojity zisk: [[YELLOW]]{0}
 Herbalism.Ability.FD=[[RED]]Farm\u00e1\u0159\u016fv apetit: [[YELLOW]]Rank {0}
 Herbalism.Ability.GTe.Length=[[RED]]D\u00e9lka trv\u00e1n\u00ed Zelen\u00e9 planety: [[YELLOW]]{0}s
-Herbalism.Ability.GTh.Chance=[[RED]]Green Thumb Chance: [[YELLOW]]{0}%
+Herbalism.Ability.GTh.Chance=[[RED]]Green Thumb Chance: [[YELLOW]]{0}
 Herbalism.Ability.GTh.Fail=[[RED]]**ZAHRADN\u00cdK SELHAL**
 Herbalism.Ability.GTh.Stage=[[RED]]Green Thumb Stage: [[YELLOW]] Crops grow in stage {0}
 Herbalism.Ability.GTh=[[GREEN]]**ZAHRADNIK**
@@ -136,7 +136,7 @@ Mining.Effect.7=Navysuje vzdalenost exploze TNT
 Mining.Effect.8=Odborn\u00e1 demolice
 Mining.Effect.9=Snizuje zraneni zpusobene vybuchem TNT
 Mining.Effect.Decrease=[[RED]]Sn\u00ed\u017een\u00ed \u0161kod Demoli\u010dn\u00edho experta: [[YELLOW]]{0}
-Mining.Effect.DropChance=[[RED]]Sance na dvojity zisk: [[YELLOW]]{0}%
+Mining.Effect.DropChance=[[RED]]Sance na dvojity zisk: [[YELLOW]]{0}
 Mining.Listener=Dolovani:
 Mining.SkillName=DOLOVANI
 Mining.Skills.SuperBreaker.Off=[[RED]]**Super Ni\u010den\u00ed vyprchalo**
@@ -146,14 +146,14 @@ Mining.Skills.SuperBreaker.Other.On=[[GREEN]]{0}[[DARK_GREEN]] has used [[RED]]M
 Mining.Skills.SuperBreaker.Refresh=[[GREEN]]Schopnost [[YELLOW]]Super Breaker [[GREEN]]obnovena!
 Mining.Skillup=[[YELLOW]]Dovednost v dolovani byla navysena o {0}. Celkem ({1})
 Mining.Blast.Boom=[[GRAY]]**VYBUCH**
-Mining.Blast.Effect.0=+35% rud
-Mining.Blast.Effect.1=+40% rud
-Mining.Blast.Effect.2=+45% rud, bez suti
-Mining.Blast.Effect.3=+50% rud, bez suti
-Mining.Blast.Effect.4=+55% rud, bez suti, dvojit\u00e9 dropy
-Mining.Blast.Effect.5=+60% rud, bez suti, dvojit\u00e9 dropy
-Mining.Blast.Effect.6=+65% rud, bez suti, trojit\u00e9 dropy
-Mining.Blast.Effect.7=+70% rud, bez suti, trojit\u00e9 dropy
+Mining.Blast.Effect.0=+35 rud
+Mining.Blast.Effect.1=+40 rud
+Mining.Blast.Effect.2=+45 rud, bez suti
+Mining.Blast.Effect.3=+50 rud, bez suti
+Mining.Blast.Effect.4=+55 rud, bez suti, dvojit\u00e9 dropy
+Mining.Blast.Effect.5=+60 rud, bez suti, dvojit\u00e9 dropy
+Mining.Blast.Effect.6=+65 rud, bez suti, trojit\u00e9 dropy
+Mining.Blast.Effect.7=+70 rud, bez suti, trojit\u00e9 dropy
 Mining.Blast.Radius.Increase=[[RED]]Navyseni radiusu vybuchu: [[YELLOW]]+{0}
 Mining.Blast.Rank=[[RED]]V\u00fdbu\u0161n\u00e9 t\u011b\u017een\u00ed [[YELLOW]] Rank {0}/8 [[GRAY]]({1})
 Mining.Blast.Other.On=[[GREEN]]{0}[[DARK_GREEN]] pou\u017eil [[RED]]V\u00fdbu\u0161n\u00e9 T\u011b\u017een\u00ed!
@@ -190,12 +190,12 @@ Repair.Skills.FeltEasy=[[GRAY]]To bylo snadn\u00e9.
 Repair.Skills.FullDurability=[[GRAY]]Tento p\u0159edm\u011bt nen\u00ed po\u0161kozen\u00fd.
 Repair.Skills.SalvageSuccess=[[GRAY]]Item salvaged!
 Repair.Skills.NotFullDurability=[[DARK_RED]]You can\'t salvage damaged items.
-Repair.Skills.Mastery=[[RED]]Repair Mastery: [[YELLOW]]Extra {0}% durability restored
+Repair.Skills.Mastery=[[RED]]Repair Mastery: [[YELLOW]]Extra {0} durability restored
 Repair.Skills.StackedItems=[[DARK_RED]]Nem\u016f\u017ee\u0161 opravovat nestackovan\u00e9 p\u0159edm\u011bty.
-Repair.Skills.Super.Chance=[[RED]]Super Repair Chance: [[YELLOW]]{0}%
+Repair.Skills.Super.Chance=[[RED]]Super Repair Chance: [[YELLOW]]{0}
 Repair.Skillup=[[YELLOW]]Dovednost v opravovani byla navysena o {0}. Celkem ({1})
-Repair.Arcane.Chance.Downgrade=[[GRAY]]Sance na degradovani magicke sily predmetu: [[YELLOW]]{0}%
-Repair.Arcane.Chance.Success=[[GRAY]]Mira uspesnosti AF: [[YELLOW]]{0}%
+Repair.Arcane.Chance.Downgrade=[[GRAY]]Sance na degradovani magicke sily predmetu: [[YELLOW]]{0}
+Repair.Arcane.Chance.Success=[[GRAY]]Mira uspesnosti AF: [[YELLOW]]{0}
 Repair.Arcane.Downgrade=[[RED]]Magick\u00e1 s\u00edla tohoto p\u0159edm\u011btu zesl\u00e1bla.
 Repair.Arcane.Fail=[[RED]]Predmet ztratil navzdy svou magickou silu.
 Repair.Arcane.Lost=[[RED]]Nemel jsi dostatocnou dovednost pro zachovani ocarovani predmetu.
@@ -203,20 +203,20 @@ Repair.Arcane.Perfect=[[GREEN]]Udr\u017eel jsi nezn\u00e1mou enegii v tomto p\u0
 Repair.Arcane.Rank=[[RED]]Tajemne kov\u00e1n\u00ed: [[YELLOW]]Level {0}/4
 Swords.Ability.Lower=[[GRAY]]**ODLOZIL JSI SVUJ MEC**
 Swords.Ability.Ready=[[GREEN]]**PRIPRAVIL JSI SVUJ MEC**
-Swords.Combat.Bleed.Chance=[[RED]]Bleed Chance: [[YELLOW]]{0}%
+Swords.Combat.Bleed.Chance=[[RED]]Bleed Chance: [[YELLOW]]{0}
 Swords.Combat.Bleed.Length=[[RED]]D\u00e9lka krv\u00e1cen\u00ed: [[YELLOW]]{0} tik\u016f
 Swords.Combat.Bleed.Note=[[GRAY]]NOTE: [[YELLOW]]1 trva 2 sekundy
 Swords.Combat.Bleeding.Started=[[DARK_RED]] Krv\u00e1c\u00ed\u0161!
 Swords.Combat.Bleeding.Stopped=[[GRAY]]Krvaceni bylo [[GREEN]]zastaveno[[GRAY]]!
 Swords.Combat.Bleeding=[[GREEN]]**NEPRITEL KRVACI**
-Swords.Combat.Counter.Chance=[[RED]]Sance na protiutok: [[YELLOW]]{0}%
+Swords.Combat.Counter.Chance=[[RED]]Sance na protiutok: [[YELLOW]]{0}
 Swords.Combat.Counter.Hit=[[DARK_RED]]Zasa\u017een proti\u00fatokem!
 Swords.Combat.Countered=[[GREEN]]**PROTIUTOK**
 Swords.Combat.SS.Struck=[[DARK_RED]]Zasazen Hrozivym utokem!
 Swords.Effect.0=Protiutok
-Swords.Effect.1=Odra\u017e 50% zran\u011bn\u00ed
+Swords.Effect.1=Odra\u017e 50 zran\u011bn\u00ed
 Swords.Effect.2=Hrozivy utok (SCHOPNOST)
-Swords.Effect.3=25% zraneni AoE, Krvaceni+ AoE
+Swords.Effect.3=25 zraneni AoE, Krvaceni+ AoE
 Swords.Effect.4=Hrozivy utok krvaceni+
 Swords.Effect.5=Krvaceni po dobu 5 ticku
 Swords.Effect.6=Krv\u00e1cen\u00ed
@@ -239,13 +239,13 @@ Taming.Ability.Bonus.5=V\u00fdbu\u0161niny d\u00e1vaj\u00ed 1/6 norm\u00e1ln\u00
 Taming.Ability.Bonus.6=Nabrousene drapy
 Taming.Ability.Bonus.7=+2 Zraneni
 Taming.Ability.Bonus.8=Rychl\u00e9 Ob\u010derstven\u00ed
-Taming.Ability.Bonus.9={0}% Chance for heal on attack
+Taming.Ability.Bonus.9={0} Chance for heal on attack
 Taming.Ability.Locked.0=LOCKED UNTIL {0}+ SKILL (ENVIRONMENTALLY AWARE)
 Taming.Ability.Locked.1=LOCKED UNTIL {0}+ SKILL (THICK FUR)
 Taming.Ability.Locked.2=LOCKED UNTIL {0}+ SKILL (SHOCK PROOF)
 Taming.Ability.Locked.3=LOCKED UNTIL {0}+ SKILL (SHARPENED CLAWS)
 Taming.Ability.Locked.4=LOCKED UNTIL {0}+ SKILL (FAST FOOD SERVICE)
-Taming.Combat.Chance.Gore=[[RED]]Gore Chance: [[YELLOW]]{0}%
+Taming.Combat.Chance.Gore=[[RED]]Gore Chance: [[YELLOW]]{0}
 Taming.Effect.0=Tradice \u0161elem
 Taming.Effect.1=Na\u0159\u00edznut\u00ed kost\u00ed kontroluje vlky & oceloty
 Taming.Effect.10=Otresuvzdorny
@@ -274,12 +274,12 @@ Taming.Summon.Fail.Wolf=[[RED]]M\u00e1\u0161 p\u0159\u00edli\u0161 mnoho vlk\u01
 Unarmed.Ability.Berserk.Length=[[RED]]Delka trvani Besneni: [[YELLOW]]{0}s
 Unarmed.Ability.Bonus.0=Styl \u017eelezn\u00e9 pa\u017ee
 Unarmed.Ability.Bonus.1=+{0} Zv\u00fd\u0161en\u00ed zran\u011bn\u00ed
-Unarmed.Ability.Chance.ArrowDeflect=[[RED]]Sance na vychyleni sipu: [[YELLOW]]{0}%
-Unarmed.Ability.Chance.Disarm=[[RED]]Disarm Chance: [[YELLOW]]{0}%
+Unarmed.Ability.Chance.ArrowDeflect=[[RED]]Sance na vychyleni sipu: [[YELLOW]]{0}
+Unarmed.Ability.Chance.Disarm=[[RED]]Disarm Chance: [[YELLOW]]{0}
 Unarmed.Ability.Lower=[[GRAY]]**SKL\u00c1N\u00cd\u0160 SV\u00c9 P\u011aSTI**
 Unarmed.Ability.Ready=[[GREEN]]**PRIPRAVIL JSI SVOJE PESTI**
 Unarmed.Effect.0=B\u011bsn\u011bn\u00ed (SCHOPNOST)
-Unarmed.Effect.1=+50% DMG, Nici slabsi materiali
+Unarmed.Effect.1=+50 DMG, Nici slabsi materiali
 Unarmed.Effect.2=Odzbrojit (Hr\u00e1ce)
 Unarmed.Effect.3=Vyraz\u00ed nep\u0159\u00e1tel\u016fm p\u0159edm\u011bt kter\u00fd dr\u017e\u00ed v ruce
 Unarmed.Effect.4=Styl \u017eelezn\u00e9 pa\u017ee
@@ -296,7 +296,7 @@ Unarmed.Skills.Berserk.Refresh=[[GREEN]]Tvoje [[YELLOW]]schopnost B\u011bsn\u011
 Unarmed.Skillup=[[YELLOW]]Dovednost v boji rukou byla navy\u0161ena o {0}. Celkem ({1})
 Woodcutting.Ability.0=Vyfoukavac
 Woodcutting.Ability.1=Odfoukne listi
-Woodcutting.Ability.Chance.DDrop=[[RED]]Sance na dvojity zisk: [[YELLOW]]{0}%
+Woodcutting.Ability.Chance.DDrop=[[RED]]Sance na dvojity zisk: [[YELLOW]]{0}
 Woodcutting.Ability.Length=[[RED]]D\u00e9lka Tree felleru: [[YELLOW]]{0}s
 Woodcutting.Ability.Locked.0=LOCKED UNTIL {0}+ SKILL (LEAF BLOWER)
 Woodcutting.Effect.0=Ni\u010ditel strom\u016f (ABILITA)
@@ -462,9 +462,9 @@ Stats.Own.Stats=[[GREEN]][mcMMO] Statistiky
 Perks.xp.name=Experience
 Perks.xp.desc=Receive {0}x XP.
 Perks.lucky.name=Luck
-Perks.lucky.desc=Gives {0} skills and abilities a 33.3% better chance to activate.
-Perks.lucky.desc.login=Gives certain skills and abilities a 33.3% better chance to activate.
-Perks.lucky.bonus=[[GOLD]] ({0}% with Lucky Perk)
+Perks.lucky.desc=Gives {0} skills and abilities a 33.3 better chance to activate.
+Perks.lucky.desc.login=Gives certain skills and abilities a 33.3 better chance to activate.
+Perks.lucky.bonus=[[GOLD]] ({0} with Lucky Perk)
 Perks.cooldowns.name=Fast Recovery
 Perks.cooldowns.desc=Cuts cooldown duration by {0}.
 Perks.activationtime.name=Endurance
