--- a/src/main/resources/locale/locale_de.properties
+++ b/src/main/resources/locale/locale_de.properties
@@ -9,7 +9,7 @@
 #AKROBATIK
 Acrobatics.Ability.Proc=[[GREEN]]**Grazi\u00F6s Abgerollt**
 Acrobatics.Combat.Proc=[[GREEN]]**Ausgewichen**
-Acrobatics.DodgeChance=[[RED]]Ausweich-Chance: [[YELLOW]]{0}%
+Acrobatics.DodgeChance=[[RED]]Ausweich-Chance: [[YELLOW]]{0}
 Acrobatics.Effect.0=Rolle
 Acrobatics.Effect.1=Reduziert oder negiert Fall-Schaden
 Acrobatics.Effect.2=Grazi\u00F6se Rolle
@@ -17,15 +17,15 @@ Acrobatics.Effect.3=Doppelte Effektivit\u00E4t der Rolle
 Acrobatics.Effect.4=Ausweichen
 Acrobatics.Effect.5=Halbiert Angriffschaden
 Acrobatics.Listener=Akrobatik: 
-Acrobatics.Roll.Chance=[[RED]]Rolle-Chance: [[YELLOW]]{0}%
-Acrobatics.Roll.GraceChance=[[RED]]Grazi\u00F6se Rolle-Chance: [[YELLOW]]{0}%
+Acrobatics.Roll.Chance=[[RED]]Rolle-Chance: [[YELLOW]]{0}
+Acrobatics.Roll.GraceChance=[[RED]]Grazi\u00F6se Rolle-Chance: [[YELLOW]]{0}
 Acrobatics.Roll.Text=**Abgerollt**
 Acrobatics.SkillName=AKROBATIK
 Acrobatics.Skillup=[[YELLOW]]Akrobatik Skill um {0} gestiegen. Gesamt ({1})
 
 #BOGEN
-Archery.Combat.DazeChance=[[RED]]Chance auf Bet\u00E4ubung: [[YELLOW]]{0}%
-Archery.Combat.RetrieveChance=[[RED]]Chance auf Pfeil-R\u00FCckgewinnung: [[YELLOW]]{0}%
+Archery.Combat.DazeChance=[[RED]]Chance auf Bet\u00E4ubung: [[YELLOW]]{0}
+Archery.Combat.RetrieveChance=[[RED]]Chance auf Pfeil-R\u00FCckgewinnung: [[YELLOW]]{0}
 Archery.Combat.SkillshotBonus=[[RED]]Kunstschuss Zusatzschaden: [[YELLOW]]{0}
 Archery.Effect.0=Kunstschuss
 Archery.Effect.1=Erh\u00F6ht Schaden vom Bogen
@@ -48,7 +48,7 @@ Axes.Ability.Lower=[[GRAY]]**Du senkst deine Axt**
 Axes.Ability.Ready=[[GREEN]]**Deine Axt ist bereit**
 Axes.Combat.Cleave.Proc=[[DARK_RED]]AUSGESCHALTET durch SCHLITZER!
 Axes.Combat.CritStruck=[[DARK_RED]]Du wurdest KRITISCH getroffen!
-Axes.Combat.CritChance=[[RED]]Chance auf kritischen Treffer: [[YELLOW]]{0}%
+Axes.Combat.CritChance=[[RED]]Chance auf kritischen Treffer: [[YELLOW]]{0}
 Axes.Combat.CriticalHit=[[RED]]KRITISCHER TREFFER!
 Axes.Combat.GI.Proc=[[GREEN]]**AUSGESCHALTET durch GEWALT SCHLAG**
 Axes.Combat.GI.Struck=[[RED]]**Von WUCHT-SCHLAG getroffen**
@@ -93,7 +93,7 @@ Excavation.Skillup=[[YELLOW]]Graben Skill um {0} gestiegen. Gesamt ({1})
 Fishing.Ability.Info=[[RED]]Zauber-J\u00E4ger: [[GRAY]] **Verbessert sich mit Schatz-J\u00E4ger Rang**
 Fishing.Ability.Locked.0=GESPERRT bis Skill Skill {0}+ (Reissen)
 Fishing.Ability.Rank=[[RED]]Schatz-J\u00E4ger Rang: [[YELLOW]]{0}/5
-Fishing.Ability.Shake=[[RED]]Reissen-Chance: [[YELLOW]]{0}%
+Fishing.Ability.Shake=[[RED]]Reissen-Chance: [[YELLOW]]{0}
 Fishing.Ability.FD=[[RED]]Fischer-Mahlzeit Rang: [[YELLOW]]{0}
 Fishing.Effect.0=Schatz-J\u00E4ger (Passiv)
 Fishing.Effect.1=Angle verschiedene Objekte
@@ -111,10 +111,10 @@ Fishing.SkillName=ANGELN
 Fishing.Skillup=[[YELLOW]]Angel Skill um {0} gestiegen. Gesamt ({1})
 
 #PFLANZENKUNDE
-Herbalism.Ability.DoubleDropChance=[[RED]]Chance auf Doppel-Drops: [[YELLOW]]{0}%
+Herbalism.Ability.DoubleDropChance=[[RED]]Chance auf Doppel-Drops: [[YELLOW]]{0}
 Herbalism.Ability.FD=[[RED]]Bauernfr\u00FChst\u00FCck Rang:[[YELLOW]] {0}
 Herbalism.Ability.GTe.Length=[[RED]]Gr\u00FCnes Land Dauer: [[YELLOW]]{0}s
-Herbalism.Ability.GTh.Chance=[[RED]]Gr\u00FCner Daumen Chance: [[YELLOW]]{0}%
+Herbalism.Ability.GTh.Chance=[[RED]]Gr\u00FCner Daumen Chance: [[YELLOW]]{0}
 Herbalism.Ability.GTh.Fail=[[RED]]**Gr\u00FCner Daumen GESCHEITERT**
 Herbalism.Ability.GTh.Stage=[[RED]]Gr\u00FCner Daumen Stufe: [[YELLOW]] Weizen w\u00E4chst auf Stufe {0}
 Herbalism.Ability.GTh=[[GREEN]]**GR\u00DCNER DAUMEN**
@@ -157,7 +157,7 @@ Mining.Effect.7=Erh\u00F6ht den Explosions-Radius
 Mining.Effect.8=Explosions-Experte
 Mining.Effect.9=Reduziert den Schaden durch TNT Explosinen
 Mining.Effect.Decrease=[[RED]]Explosions-Experte Schadensreduzierung: [[YELLOW]]{0}
-Mining.Effect.DropChance=[[RED]]Doppel Drop Chance: [[YELLOW]]{0}%
+Mining.Effect.DropChance=[[RED]]Doppel Drop Chance: [[YELLOW]]{0}
 Mining.Listener=Bergbau: 
 Mining.SkillName=BERGBAU
 Mining.Skills.SuperBreaker.Off=[[RED]]**Super-Brecher ist ausgelaufen**
@@ -169,14 +169,14 @@ Mining.Skillup=[[YELLOW]]Bergbau Skill um {0} gestiegen. Gesamt ({1})
 
 #Z\u00FCndstoff
 Mining.Blast.Boom=[[GRAY]]**BOOM**
-Mining.Blast.Effect.0=+35% Erz-Ausbeute
-Mining.Blast.Effect.1=+40% Erz-Ausbeute
-Mining.Blast.Effect.2=+45% Erz-Ausbeute, kein Schutt
-Mining.Blast.Effect.3=+50% Erz-Ausbeute, kein Schutt
-Mining.Blast.Effect.4=+55% Erz-Ausbeute, kein Schutt, Doppel-Drops
-Mining.Blast.Effect.5=+60% Erz-Ausbeute, kein Schutt, Doppel-Drops
-Mining.Blast.Effect.6=+65% Erz-Ausbeute, kein Schutt, Dreifach-Drops
-Mining.Blast.Effect.7=+70% Erz-Ausbeute, kein Schutt, Dreifach-Drops
+Mining.Blast.Effect.0=+35 Erz-Ausbeute
+Mining.Blast.Effect.1=+40 Erz-Ausbeute
+Mining.Blast.Effect.2=+45 Erz-Ausbeute, kein Schutt
+Mining.Blast.Effect.3=+50 Erz-Ausbeute, kein Schutt
+Mining.Blast.Effect.4=+55 Erz-Ausbeute, kein Schutt, Doppel-Drops
+Mining.Blast.Effect.5=+60 Erz-Ausbeute, kein Schutt, Doppel-Drops
+Mining.Blast.Effect.6=+65 Erz-Ausbeute, kein Schutt, Dreifach-Drops
+Mining.Blast.Effect.7=+70 Erz-Ausbeute, kein Schutt, Dreifach-Drops
 Mining.Blast.Radius.Increase=[[RED]]Z\u00FCndstoff Radius Erh\u00F6hung: [[YELLOW]]+{0}
 Mining.Blast.Rank=[[RED]]Z\u00FCndstoff Rang:[[YELLOW]] {0}/8 [[GRAY]]({1})
 Mining.Blast.Other.On=[[GREEN]]{0}[[DARK_GREEN]] benutzte [[RED]]Z\u00FCndstoff!
@@ -215,14 +215,14 @@ Repair.Skills.FeltEasy=[[GRAY]]Das f\u00FChlte sich einfach an.
 Repair.Skills.FullDurability=[[GRAY]]Dieser Gegenstand hat volle Haltbarkeit.
 Repair.Skills.SalvageSuccess=[[GRAY]]Gegenstand verwertet!
 Repair.Skills.NotFullDurability=[[DARK_RED]]Du kannst keine besch\u00E4digten Gegenst\u00E4nde verwerten.
-Repair.Skills.Mastery=[[RED]]Reparatur-Meister: [[YELLOW]]{0}% Zusatz-Haltbarkeit.
+Repair.Skills.Mastery=[[RED]]Reparatur-Meister: [[YELLOW]]{0} Zusatz-Haltbarkeit.
 Repair.Skills.StackedItems=[[DARK_RED]]Du kannst keine gestpaleten Gegenst\u00E4nde reparieren.
-Repair.Skills.Super.Chance=[[RED]]Super-Reparatur Chance: [[YELLOW]]{0}%
+Repair.Skills.Super.Chance=[[RED]]Super-Reparatur Chance: [[YELLOW]]{0}
 Repair.Skillup=[[YELLOW]]Reparatur Skill um {0} gestiegen. Gesamt ({1})
 
 ##ARKANES SCHMIEDEN
-Repair.Arcane.Chance.Downgrade=[[GRAY]]AS Verminderungs Chance: [[YELLOW]]{0}%
-Repair.Arcane.Chance.Success=[[GRAY]]AS Erfolgs-Rate: [[YELLOW]]{0}%
+Repair.Arcane.Chance.Downgrade=[[GRAY]]AS Verminderungs Chance: [[YELLOW]]{0}
+Repair.Arcane.Chance.Success=[[GRAY]]AS Erfolgs-Rate: [[YELLOW]]{0}
 Repair.Arcane.Downgrade=[[RED]]Zauber-Wert des Gegenstands vermindert.
 Repair.Arcane.Fail=[[RED]]Der Gegenstands wurde entzaubert.
 Repair.Arcane.Lost=[[RED]]Du hast nicht gen\u00FCgend Skill um Verzauberungen zu erhalten.
@@ -232,20 +232,20 @@ Repair.Arcane.Rank=[[RED]]Arkanes Schmieden Rang: [[YELLOW]]{0}/4
 #SCHWERTER
 Swords.Ability.Lower=[[GRAY]]**Du senkst dein SCHWERT**
 Swords.Ability.Ready=[[GREEN]]**Dein SCHWERT ist bereit**
-Swords.Combat.Bleed.Chance=[[RED]]Blutungs Chance: [[YELLOW]]{0}%
+Swords.Combat.Bleed.Chance=[[RED]]Blutungs Chance: [[YELLOW]]{0}
 Swords.Combat.Bleed.Length=[[RED]]Blutungs Dauer: [[YELLOW]]{0} ticks
 Swords.Combat.Bleed.Note=[[GRAY]]Info: [[YELLOW]]1 Tick tritt alle 2 Sekunden ein.
 Swords.Combat.Bleeding.Started=[[DARK_RED]] Du blutest!
 Swords.Combat.Bleeding.Stopped=[[GRAY]]Die Blutung [[GREEN]]stoppt[[GRAY]]!
 Swords.Combat.Bleeding=[[GREEN]]**GEGNER BLUTET**
-Swords.Combat.Counter.Chance=[[RED]]Gegenangriff Chance: [[YELLOW]]{0}%
+Swords.Combat.Counter.Chance=[[RED]]Gegenangriff Chance: [[YELLOW]]{0}
 Swords.Combat.Counter.Hit=[[DARK_RED]]Treffer durch Gegenangriff!
 Swords.Combat.Countered=[[GREEN]]**GEGENANGRIFF**
 Swords.Combat.SS.Struck=[[DARK_RED]]Getroffen von S\u00C4GEZAHNSCHLAG!
 Swords.Effect.0=Gegenangriff
-Swords.Effect.1=Reflektiert 50% des erhaltenen Schadens
+Swords.Effect.1=Reflektiert 50 des erhaltenen Schadens
 Swords.Effect.2=S\u00E4gezahnschlag (F\u00E4higkeit)
-Swords.Effect.3=25% Umgebungsschaden, Blutung+
+Swords.Effect.3=25 Umgebungsschaden, Blutung+
 Swords.Effect.4=S\u00E4gezahnschlag, Blutung+
 Swords.Effect.5=5 Ticks Blutung
 Swords.Effect.6=Blutung
@@ -270,13 +270,13 @@ Taming.Ability.Bonus.5=Explosionen verursachen 1/6 Schaden
 Taming.Ability.Bonus.6=Gesch\u00E4rfte Krallen
 Taming.Ability.Bonus.7=+2 Schaden
 Taming.Ability.Bonus.8=Schnell-Imbiss
-Taming.Ability.Bonus.9={0}% Chance auf Heilung bei Attacke
+Taming.Ability.Bonus.9={0} Chance auf Heilung bei Attacke
 Taming.Ability.Locked.0=GESPERRT bis Skill {0}+ (Umweltbewusst)
 Taming.Ability.Locked.1=GESPERRT bis Skill {0}+ (Dicker Pelz)
 Taming.Ability.Locked.2=GESPERRT bis Skill {0}+ (Schock-Sicher)
 Taming.Ability.Locked.3=GESPERRT bis Skill {0}+ (Gesch\u00E4rfte Krallen)
 Taming.Ability.Locked.4=GESPERRT bis Skill {0}+ (Schnell-Imbiss)
-Taming.Combat.Chance.Gore=[[RED]]Aufschlitzen Chance: [[YELLOW]]{0}%
+Taming.Combat.Chance.Gore=[[RED]]Aufschlitzen Chance: [[YELLOW]]{0}
 Taming.Effect.0=Bestienkunde
 Taming.Effect.1=Knochenschlag inspiziert W\u00F6lfe und Ozelots
 Taming.Effect.10=Schock-Sicher
@@ -307,12 +307,12 @@ Taming.Summon.Fail.Wolf=[[RED]]Du hast zu viele W\u00F6lfe um dich, um weitere z
 Unarmed.Ability.Berserk.Length=[[RED]]Berserker Dauer: [[YELLOW]]{0}s
 Unarmed.Ability.Bonus.0=Eiserner Arm
 Unarmed.Ability.Bonus.1=+{0} Schadens-Bonus
-Unarmed.Ability.Chance.ArrowDeflect=[[RED]]Pfeile ablenken Chance: [[YELLOW]]{0}%
-Unarmed.Ability.Chance.Disarm=[[RED]]Entwaffnen Chance: [[YELLOW]]{0}%
+Unarmed.Ability.Chance.ArrowDeflect=[[RED]]Pfeile ablenken Chance: [[YELLOW]]{0}
+Unarmed.Ability.Chance.Disarm=[[RED]]Entwaffnen Chance: [[YELLOW]]{0}
 Unarmed.Ability.Lower=[[GRAY]]**Du senkst deine F\u00C4USTE**
 Unarmed.Ability.Ready=[[GREEN]]**Deine F\u00C4USTE sind bereit**
 Unarmed.Effect.0=Berserker (F\u00E4higkeit)
-Unarmed.Effect.1=+50% Schaden, Zerbricht weiche Materialien
+Unarmed.Effect.1=+50 Schaden, Zerbricht weiche Materialien
 Unarmed.Effect.2=Entwaffnen (Spieler)
 Unarmed.Effect.3=Dropt Gegenstand aus der Hand des Feindes
 Unarmed.Effect.4=Eiserner Arm
@@ -331,7 +331,7 @@ Unarmed.Skillup=[[YELLOW]]Unbewaffnet Skill um {0} gestiegen. Gesamt ({1})
 #HOLZF\u00C4LLER
 Woodcutting.Ability.0=Bl\u00E4ttersturm
 Woodcutting.Ability.1=Bl\u00E4st Bl\u00E4tter davon
-Woodcutting.Ability.Chance.DDrop=[[RED]]Doppel Drop Chance: [[YELLOW]]{0}%
+Woodcutting.Ability.Chance.DDrop=[[RED]]Doppel Drop Chance: [[YELLOW]]{0}
 Woodcutting.Ability.Length=[[RED]]Baumf\u00E4ller Dauer: [[YELLOW]]{0}s
 Woodcutting.Ability.Locked.0=GESPERRT bis Skill {0}+ (Bl\u00E4ttersturm)
 Woodcutting.Effect.0=Baumf\u00E4ller (F\u00E4higkeit)
@@ -524,9 +524,9 @@ Stats.Own.Stats=[[GREEN]][mcMMO] Werte
 Perks.xp.name=Erfahrung
 Perks.xp.desc=Erhalte {0}x XP.
 Perks.lucky.name=Gl\u00FCck
-Perks.lucky.desc=33.3% Erh\u00F6hte Chance auf Aktivierung von {0} Skills & F\u00E4higkeiten.
-Perks.lucky.desc.login=33.3% Erh\u00F6hte Chance auf Aktivierung von gewissen Skills & F\u00E4higkeiten.
-Perks.lucky.bonus=[[GOLD]] ({0}% mit Gl\u00FCck-Perk)
+Perks.lucky.desc=33.3 Erh\u00F6hte Chance auf Aktivierung von {0} Skills & F\u00E4higkeiten.
+Perks.lucky.desc.login=33.3 Erh\u00F6hte Chance auf Aktivierung von gewissen Skills & F\u00E4higkeiten.
+Perks.lucky.bonus=[[GOLD]] ({0} mit Gl\u00FCck-Perk)
 Perks.cooldowns.name=Schnelle Wiederherstellung
 Perks.cooldowns.desc=Verk\u00FCrzt die Cooldownzeit um {0}.
 Perks.activationtime.name=Ausdauer
