--- a/src/main/resources/locale/locale_es.properties
+++ b/src/main/resources/locale/locale_es.properties
@@ -1,6 +1,6 @@
 Acrobatics.Ability.Proc=[[GREEN]]**Aterrizaje Agraciado**
 Acrobatics.Combat.Proc=[[GREEN]]**Esquivado**
-Acrobatics.DodgeChance=[[RED]]Probabilidad de Esquivar: [[YELLOW]]{0}%
+Acrobatics.DodgeChance=[[RED]]Probabilidad de Esquivar: [[YELLOW]]{0}
 Acrobatics.Effect.0=Rodada
 Acrobatics.Effect.1=Reduce o Elimina el da\u00f1o de caida
 Acrobatics.Effect.2=Rodada Majestuosa
@@ -8,13 +8,13 @@ Acrobatics.Effect.3=El doble de efectivo que una rodada normal
 Acrobatics.Effect.4=Esquivar
 Acrobatics.Effect.5=Reduce el da\u00f1o de ataque a la mitad
 Acrobatics.Listener=Acrobacias: 
-Acrobatics.Roll.Chance=[[RED]]Probabilidad de Rodar: [[YELLOW]]{0}%
-Acrobatics.Roll.GraceChance=[[RED]]Probabilidad de Rodada Majestuosa: [[YELLOW]]{0}%
+Acrobatics.Roll.Chance=[[RED]]Probabilidad de Rodar: [[YELLOW]]{0}
+Acrobatics.Roll.GraceChance=[[RED]]Probabilidad de Rodada Majestuosa: [[YELLOW]]{0}
 Acrobatics.Roll.Text=**Rodado**
 Acrobatics.SkillName=ACROBACIAS
 Acrobatics.Skillup=[[YELLOW]]Habilidad de Acrobacias incrementada en {0}. Total ({1})
-Archery.Combat.DazeChance=[[RED]]Probabilidad de Aturdimiento: [[YELLOW]]{0}%
-Archery.Combat.RetrieveChance=[[RED]]Probabilidad de Recuperar Flechas: [[YELLOW]]{0}%
+Archery.Combat.DazeChance=[[RED]]Probabilidad de Aturdimiento: [[YELLOW]]{0}
+Archery.Combat.RetrieveChance=[[RED]]Probabilidad de Recuperar Flechas: [[YELLOW]]{0}
 Archery.Combat.SkillshotBonus=[[RED]]Da\u00f1o bonus por Habilidad de Tiro: [[YELLOW]]{0}
 Archery.Effect.0=Habilidad de Tiro
 Archery.Effect.1=Incrementar da\u00f1o hecho con arcos
@@ -35,7 +35,7 @@ Axes.Ability.Lower=[[GRAY]]**BAJAS TU HACHA**
 Axes.Ability.Ready=[[GREEN]]**PREPARAS TU HACHA**
 Axes.Combat.Cleave.Proc=[[DARK_RED]]\u00a1Golpeado por PARTIR!
 Axes.Combat.CritStruck=[[DARK_RED]]\u00a1Fuiste golpeado CR\u00cdTICAMENTE!
-Axes.Combat.CritChance=[[RED]]Probabilidad de golpe cr\u00edtico: [[YELLOW]]{0}%
+Axes.Combat.CritChance=[[RED]]Probabilidad de golpe cr\u00edtico: [[YELLOW]]{0}
 Axes.Combat.CriticalHit=[[RED]]\u00a1GOLPE CR\u00cdTICO!
 Axes.Combat.GI.Proc=[[GREEN]]**GOLPEADO CON GRAN FUERZA**
 Axes.Combat.GI.Struck=[[RED]]**GOLPEADO POR IMPACTO MAYOR**
@@ -76,7 +76,7 @@ Excavation.Skillup=[[YELLOW]]Habilidad de Excavaci\u00f3n incrementada en {0}. T
 Fishing.Ability.Info=[[RED]]Cazador M\u00e1gico: [[GRAY]] **Mejora con Rango de Buscador de Tesoros**
 Fishing.Ability.Locked.0=LOCKED UNTIL {0}+ SKILL (SHAKE)
 Fishing.Ability.Rank=[[RED]]Cazador de Tesoros: [[YELLOW]]Rango {0}/5
-Fishing.Ability.Shake=[[RED]]Shake Chance: [[YELLOW]]{0}%
+Fishing.Ability.Shake=[[RED]]Shake Chance: [[YELLOW]]{0}
 Fishing.Ability.FD=[[RED]]Fisherman\'\'s Diet: [[YELLOW]]Rank {0}
 Fishing.Effect.0=Cazador de Tesoros (Pasivo)
 Fishing.Effect.1=Pescar objetos miscel\u00e1neos
@@ -92,10 +92,10 @@ Fishing.Listener=Pescador:
 Fishing.MagicFound=[[GRAY]]Sientes un toque de magia con esta pesca...
 Fishing.SkillName=PESCADOR
 Fishing.Skillup=[[YELLOW]]Habilidad de Pescador incrementada en {0}. Total ({1})
-Herbalism.Ability.DoubleDropChance=[[RED]]Probabilidad de Doble Drop: [[YELLOW]]{0}%
+Herbalism.Ability.DoubleDropChance=[[RED]]Probabilidad de Doble Drop: [[YELLOW]]{0}
 Herbalism.Ability.FD=[[RED]]Dieta del Granjero: [[YELLOW]]Rango {0}
 Herbalism.Ability.GTe.Length=[[RED]]Duraci\u00f3n de Tierra Verde: [[YELLOW]]{0}seg
-Herbalism.Ability.GTh.Chance=[[RED]]Probabilidad de Pulgar Verde: [[YELLOW]]{0}%
+Herbalism.Ability.GTh.Chance=[[RED]]Probabilidad de Pulgar Verde: [[YELLOW]]{0}
 Herbalism.Ability.GTh.Fail=[[RED]]**PULGAR VERDE FALL\u00d3**
 Herbalism.Ability.GTh.Stage=[[RED]]Green Thumb Stage: [[YELLOW]] Crops grow in stage {0}
 Herbalism.Ability.GTh=[[GREEN]]**PULGAR VERDE**
@@ -136,7 +136,7 @@ Mining.Effect.7=Incrementa el radio de la explosi\u00f3n de TNT
 Mining.Effect.8=Experto en Demoliciones
 Mining.Effect.9=Reduce el da\u00f1o de las explosiones de TNT
 Mining.Effect.Decrease=[[RED]]Da\u00f1o de Experto en Demolici\u00f3n Decrementado: [[YELLOW]]{0}
-Mining.Effect.DropChance=[[RED]]Probabilidad de Doble Drop: [[YELLOW]]{0}%
+Mining.Effect.DropChance=[[RED]]Probabilidad de Doble Drop: [[YELLOW]]{0}
 Mining.Listener=Miner\u00eda: 
 Mining.SkillName=MINER\u00cdA
 Mining.Skills.SuperBreaker.Off=[[RED]]**S\u00faper Destructor ha expirado**
@@ -146,14 +146,14 @@ Mining.Skills.SuperBreaker.Other.On=[[GREEN]]\u00a1{0}[[DARK_GREEN]] us\u00f3 [[
 Mining.Skills.SuperBreaker.Refresh=[[GREEN]]\u00a1Tu habilidad de [[YELLOW]]S\u00faper Destructor [[GREEN]]est\u00e1 refrescada!
 Mining.Skillup=[[YELLOW]]Habilidad de Miner\u00eda incrementada en {0}. Total ({1})
 Mining.Blast.Boom=[[GRAY]]**BOOM**
-Mining.Blast.Effect.0=+35% de producci\u00f3n minera
-Mining.Blast.Effect.1=+40% de producci\u00f3n minera
-Mining.Blast.Effect.2=+45% de producci\u00f3n minera, sin residuos
-Mining.Blast.Effect.3=+50% de producci\u00f3n minera, sin residuos
-Mining.Blast.Effect.4=+55% de producci\u00f3n minera, sin residuos, doble drops
-Mining.Blast.Effect.5=+60% de producci\u00f3n minera, sin residuos, doble drops
-Mining.Blast.Effect.6=+65% de producci\u00f3n minera, sin residuos y triple drops
-Mining.Blast.Effect.7=+70% de producci\u00f3n minera, sin residuos, triple drops
+Mining.Blast.Effect.0=+35 de producci\u00f3n minera
+Mining.Blast.Effect.1=+40 de producci\u00f3n minera
+Mining.Blast.Effect.2=+45 de producci\u00f3n minera, sin residuos
+Mining.Blast.Effect.3=+50 de producci\u00f3n minera, sin residuos
+Mining.Blast.Effect.4=+55 de producci\u00f3n minera, sin residuos, doble drops
+Mining.Blast.Effect.5=+60 de producci\u00f3n minera, sin residuos, doble drops
+Mining.Blast.Effect.6=+65 de producci\u00f3n minera, sin residuos y triple drops
+Mining.Blast.Effect.7=+70 de producci\u00f3n minera, sin residuos, triple drops
 Mining.Blast.Radius.Increase=[[RED]]Incrementado Radio de Explosi\u00f3n: [[YELLOW]]+{0}
 Mining.Blast.Rank=[[RED]]Miner\u00eda Explosiva: [[YELLOW]] Rango {0}/8 [[GRAY]]({1})
 Mining.Blast.Other.On=[[GREEN]]\u00a1{0}[[DARK_GREEN]] us\u00f3 [[RED]]Miner\u00eda Explosiva!
@@ -190,12 +190,12 @@ Repair.Skills.FeltEasy=[[GRAY]]Eso ha sido f\u00e1cil.
 Repair.Skills.FullDurability=[[GRAY]]Esto est\u00e1 nuevo.
 Repair.Skills.SalvageSuccess=[[GRAY]]Item salvaged!
 Repair.Skills.NotFullDurability=[[DARK_RED]]You can\'t salvage damaged items.
-Repair.Skills.Mastery=[[RED]]Maestr\u00eda de la Reparaci\u00f3n: [[YELLOW]]{0}% de durabilidad restaurada extra
+Repair.Skills.Mastery=[[RED]]Maestr\u00eda de la Reparaci\u00f3n: [[YELLOW]]{0} de durabilidad restaurada extra
 Repair.Skills.StackedItems=[[DARK_RED]]No puedes reparar items apilados.
-Repair.Skills.Super.Chance=[[RED]]Probabilidad de S\u00faper Reparaci\u00f3n: [[YELLOW]]{0}%
+Repair.Skills.Super.Chance=[[RED]]Probabilidad de S\u00faper Reparaci\u00f3n: [[YELLOW]]{0}
 Repair.Skillup=[[YELLOW]]Habilidad de Reparaci\u00f3n incrementada en {0}. Total ({1})
-Repair.Arcane.Chance.Downgrade=[[GRAY]]Probabilidad de Degradaci\u00f3n en FA: [[YELLOW]]{0}%
-Repair.Arcane.Chance.Success=[[GRAY]]Tasa de \u00c9xito de FA: [[YELLOW]]{0}%
+Repair.Arcane.Chance.Downgrade=[[GRAY]]Probabilidad de Degradaci\u00f3n en FA: [[YELLOW]]{0}
+Repair.Arcane.Chance.Success=[[GRAY]]Tasa de \u00c9xito de FA: [[YELLOW]]{0}
 Repair.Arcane.Downgrade=[[RED]]El poder Arcano de este objeto ha disminu\u00eddo.
 Repair.Arcane.Fail=[[RED]]El objeto ha perdido permanentemente sus poderes Arcanos
 Repair.Arcane.Lost=[[RED]]No tienes habilidad suficiente para mantener ning\u00fan tipo de encantamientos.
@@ -203,20 +203,20 @@ Repair.Arcane.Perfect=[[GREEN]]Has logrado mantener las energ\u00edas Arcanas de
 Repair.Arcane.Rank=[[RED]]Forja Arcana: [[YELLOW]]Rango {0}/4
 Swords.Ability.Lower=[[GRAY]]**BAJAS TU ESPADA**
 Swords.Ability.Ready=[[GREEN]]**PREPARASTE TU ESPADA**
-Swords.Combat.Bleed.Chance=[[RED]]Bleed Chance: [[YELLOW]]{0}%
+Swords.Combat.Bleed.Chance=[[RED]]Bleed Chance: [[YELLOW]]{0}
 Swords.Combat.Bleed.Length=[[RED]]Duraci\u00f3n del Sangrado: [[YELLOW]]{0} ticks
 Swords.Combat.Bleed.Note=[[GRAY]]NOTA: [[YELLOW]]1 Tick sucede cada 2 segundos
 Swords.Combat.Bleeding.Started=[[GREEN]]**ENEMIGO SANGRANDO**
 Swords.Combat.Bleeding.Stopped=[[GRAY]]\u00a1El sangrado ha [[GREEN]]parado[[GRAY]]!
 Swords.Combat.Bleeding=[[GREEN]]**ENEMIGO SANGRANDO**
-Swords.Combat.Counter.Chance=[[RED]]Probabilidad de Contra Ataque: [[YELLOW]]{0}%
+Swords.Combat.Counter.Chance=[[RED]]Probabilidad de Contra Ataque: [[YELLOW]]{0}
 Swords.Combat.Counter.Hit=[[DARK_RED]]\u00a1Alcanzado por un contra ataque!
 Swords.Combat.Countered=[[GREEN]]**CONTRA-ATACADO**
 Swords.Combat.SS.Struck=[[DARK_RED]]\u00a1Golpeado por ATAQUE DENTADO!
 Swords.Effect.0=Contra Ataque
-Swords.Effect.1=Reflejar el 50% del da\u00f1o recibido
+Swords.Effect.1=Reflejar el 50 del da\u00f1o recibido
 Swords.Effect.2=Ataque Dentado (HABILIDAD)
-Swords.Effect.3=25% de da\u00f1o y Sangrado+ en el \u00e1rea de cobertura
+Swords.Effect.3=25 de da\u00f1o y Sangrado+ en el \u00e1rea de cobertura
 Swords.Effect.4=Ataque Dentado Sangriento+
 Swords.Effect.5=Sangrado de 5 Ticks
 Swords.Effect.6=Sangrado
@@ -239,13 +239,13 @@ Taming.Ability.Bonus.5=Explosivos hacen 1/6 del da\u00f1o normal
 Taming.Ability.Bonus.6=Garras Afiladas
 Taming.Ability.Bonus.7=+2 de Da\u00f1o
 Taming.Ability.Bonus.8=Servicio de Comida R\u00e1pida
-Taming.Ability.Bonus.9={0}% Chance for heal on attack
+Taming.Ability.Bonus.9={0} Chance for heal on attack
 Taming.Ability.Locked.0=LOCKED UNTIL {0}+ SKILL (ENVIRONMENTALLY AWARE)
 Taming.Ability.Locked.1=LOCKED UNTIL {0}+ SKILL (THICK FUR)
 Taming.Ability.Locked.2=LOCKED UNTIL {0}+ SKILL (SHOCK PROOF)
 Taming.Ability.Locked.3=LOCKED UNTIL {0}+ SKILL (SHARPENED CLAWS)
 Taming.Ability.Locked.4=LOCKED UNTIL {0}+ SKILL (FAST FOOD SERVICE)
-Taming.Combat.Chance.Gore=[[RED]]Probabilidad de Mordisco: [[YELLOW]]{0}%
+Taming.Combat.Chance.Gore=[[RED]]Probabilidad de Mordisco: [[YELLOW]]{0}
 Taming.Effect.0=Conocimiento de la Bestia
 Taming.Effect.1=Golpear con un hueso para inspeccionar los lobos y ocelotes
 Taming.Effect.10=A Prueba de Golpes
@@ -279,7 +279,7 @@ Unarmed.Ability.Chance.Disarm=[[RED]]Probabilidad de Desarmar: [[YELLOW]]{0}
 Unarmed.Ability.Lower=[[GRAY]]**BAJAS TUS PU\u00d1OS**
 Unarmed.Ability.Ready=[[GREEN]]**LEVANTASTE LA GUARDIA**
 Unarmed.Effect.0=Enloquecido (HABILIDAD)
-Unarmed.Effect.1=+50% de Da\u00f1o, Rompe materiales d\u00e9biles
+Unarmed.Effect.1=+50 de Da\u00f1o, Rompe materiales d\u00e9biles
 Unarmed.Effect.2=Desarmar (Jugadores)
 Unarmed.Effect.3=Hace soltar el item que un enemigo lleva en la mano
 Unarmed.Effect.4=Estilo del Pu\u00f1o de Hierro
@@ -296,7 +296,7 @@ Unarmed.Skills.Berserk.Refresh=[[GREEN]]\u00a1T\u00fa habilidad [[YELLOW]]Enloqu
 Unarmed.Skillup=[[YELLOW]]Habilidad de Desarmado incrementada en {0}. Total ({1})
 Woodcutting.Ability.0=Soplador de Hojas
 Woodcutting.Ability.1=Remover hojas
-Woodcutting.Ability.Chance.DDrop=[[RED]]Probabilidad de Doble Drop: [[YELLOW]]{0}%
+Woodcutting.Ability.Chance.DDrop=[[RED]]Probabilidad de Doble Drop: [[YELLOW]]{0}
 Woodcutting.Ability.Length=[[RED]]Duraci\u00f3n de Ca\u00edda de \u00c1rbol: [[YELLOW]]{0}seg
 Woodcutting.Ability.Locked.0=LOCKED UNTIL {0}+ SKILL (LEAF BLOWER)
 Woodcutting.Effect.0=Ca\u00edda de \u00c1rbol (HABILIDAD)
@@ -462,9 +462,9 @@ Stats.Own.Stats=[[GREEN]][mcMMO] Estad\u00edsticas
 Perks.xp.name=Experience
 Perks.xp.desc=Receive {0}x XP.
 Perks.lucky.name=Luck
-Perks.lucky.desc=Gives {0} skills and abilities a 33.3% better chance to activate.
-Perks.lucky.desc.login=Gives certain skills and abilities a 33.3% better chance to activate.
-Perks.lucky.bonus=[[GOLD]] ({0}% with Lucky Perk)
+Perks.lucky.desc=Gives {0} skills and abilities a 33.3 better chance to activate.
+Perks.lucky.desc.login=Gives certain skills and abilities a 33.3 better chance to activate.
+Perks.lucky.bonus=[[GOLD]] ({0} with Lucky Perk)
 Perks.cooldowns.name=Fast Recovery
 Perks.cooldowns.desc=Cuts cooldown duration by {0}.
 Perks.activationtime.name=Endurance
