--- a/src/main/resources/locale/locale_fr.properties
+++ b/src/main/resources/locale/locale_fr.properties
@@ -1,6 +1,6 @@
 Acrobatics.Ability.Proc=[[GREEN]]**Atterrissage gracieux**
 Acrobatics.Combat.Proc=[[GREEN]]**Esquiv\u00e9**
-Acrobatics.DodgeChance=[[RED]]Chance d\'esquive : [[YELLOW]]{0}%
+Acrobatics.DodgeChance=[[RED]]Chance d\'esquive : [[YELLOW]]{0}
 Acrobatics.Effect.0=Roulade
 Acrobatics.Effect.1=R\u00e9duit ou annule les d\u00e9g\u00e2ts de chute
 Acrobatics.Effect.2=Roulade gracieuse
@@ -8,17 +8,17 @@ Acrobatics.Effect.3=Deux fois plus efficace qu\'une roulade classique
 Acrobatics.Effect.4=Esquive
 Acrobatics.Effect.5=R\u00e9duit de moiti\u00e9 les d\u00e9g\u00e2ts re\u00e7us
 Acrobatics.Listener=Acrobatie :
-Acrobatics.Roll.Chance=[[RED]]Chance de roulade : [[YELLOW]]{0}%
-Acrobatics.Roll.GraceChance=[[RED]]Chance de roulade gracieuse : [[YELLOW]]{0}%
+Acrobatics.Roll.Chance=[[RED]]Chance de roulade : [[YELLOW]]{0}
+Acrobatics.Roll.GraceChance=[[RED]]Chance de roulade gracieuse : [[YELLOW]]{0}
 Acrobatics.Roll.Text=**ROULADE**
 Acrobatics.SkillName=ACROBATIE
 Acrobatics.Skillup=[[YELLOW]]Le talent Acrobatie augmente de {0}. Total ({1})
-Archery.Combat.DazeChance=[[RED]]Chance de d\u00e9sorienter : [[YELLOW]]{0}%
-Archery.Combat.RetrieveChance=[[RED]]Chance de r\u00e9cup\u00e9ration de fl\u00e8che : [[YELLOW]]{0}%
+Archery.Combat.DazeChance=[[RED]]Chance de d\u00e9sorienter : [[YELLOW]]{0}
+Archery.Combat.RetrieveChance=[[RED]]Chance de r\u00e9cup\u00e9ration de fl\u00e8che : [[YELLOW]]{0}
 Archery.Combat.SkillshotBonus=[[RED]]Tir pr\u00e9cis, bonus de d\u00e9g\u00e2ts : [[YELLOW]]{0}
 Archery.Effect.0=Tir pr\u00e9cis
 Archery.Effect.1=Augmente les d\u00e9g\u00e2ts inflig\u00e9s
-Archery.Effect.2=[[RED]]Chance de d\u00e9sorienter : [[YELLOW]]{0}%
+Archery.Effect.2=[[RED]]Chance de d\u00e9sorienter : [[YELLOW]]{0}
 Archery.Effect.3=D\u00e9soriente les ennemis et inflige 4 points de d\u00e9g\u00e2ts
 Archery.Effect.4=R\u00e9cup\u00e9ration de fl\u00e8che
 Archery.Effect.5=Probabilit\u00e9 de r\u00e9cup\u00e9rer des fl\u00e8ches sur les corps
@@ -35,7 +35,7 @@ Axes.Ability.Lower=[[GRAY]]**VOUS ABAISSEZ VOTRE HACHE**
 Axes.Ability.Ready=[[GREEN]]**VOUS LEVEZ VOTRE HACHE**
 Axes.Combat.Cleave.Proc=[[DARK_RED]]Frapp\u00e9 par Tranche-cr\u00e2ne !
 Axes.Combat.CritStruck=[[DARK_RED]]Vous avez re\u00e7u un coup critique !
-Axes.Combat.CritChance=[[RED]]Chance d\'infliger un coup critique : [[YELLOW]]{0}%
+Axes.Combat.CritChance=[[RED]]Chance d\'infliger un coup critique : [[YELLOW]]{0}
 Axes.Combat.CriticalHit=[[RED]]COUP CRITIQUE !
 Axes.Combat.GI.Proc=[[GREEN]]**FRAPP\u00c9 D\'UNE VIOLENTE INOU\u00cfE**
 Axes.Combat.GI.Struck=[[RED]]**TOUCH\u00c9 PAR UN IMPACT PUISSANT**
@@ -76,7 +76,7 @@ Excavation.Skillup=[[YELLOW]]Le talent Excavation augmente de {0}. Total ({1})
 Fishing.Ability.Info=[[RED]]P\u00eache magique : [[GRAY]] **S\'am\u00e9liore via Chasseur de tr\u00e9sors**
 Fishing.Ability.Locked.0=LOCKED UNTIL {0}+ SKILL (SHAKE)
 Fishing.Ability.Rank=[[RED]]Chasseur de tr\u00e9sors : [[YELLOW]] Rang {0}/5
-Fishing.Ability.Shake=[[RED]]Shake Chance: [[YELLOW]]{0}%
+Fishing.Ability.Shake=[[RED]]Shake Chance: [[YELLOW]]{0}
 Fishing.Ability.FD=[[RED]]Fisherman\'\'s Diet: [[YELLOW]]Rank {0}
 Fishing.Effect.0=Chasseur de tr\u00e9sors
 Fishing.Effect.1=Remonte des objets inhabituels
@@ -92,10 +92,10 @@ Fishing.Listener=P\u00eache :
 Fishing.MagicFound=[[GRAY]]Vous ressentez quelque chose de magique dans cette prise...
 Fishing.SkillName=P\u00caCHE
 Fishing.Skillup=[[YELLOW]]Le talent p\u00eache augmente de {0}. Total ({1})
-Herbalism.Ability.DoubleDropChance=[[RED]]Chance de double drop : [[YELLOW]]{0}%
+Herbalism.Ability.DoubleDropChance=[[RED]]Chance de double drop : [[YELLOW]]{0}
 Herbalism.Ability.FD=[[RED]]R\u00e9gime de fermier : [[YELLOW]]Rang {0}
 Herbalism.Ability.GTe.Length=[[RED]]Dur\u00e9e de Main verte : [[YELLOW]]{0}s
-Herbalism.Ability.GTh.Chance=[[RED]]Probabilit\u00e9 de Doigts verts : [[YELLOW]]{0}%
+Herbalism.Ability.GTh.Chance=[[RED]]Probabilit\u00e9 de Doigts verts : [[YELLOW]]{0}
 Herbalism.Ability.GTh.Fail=[[RED]]**DOIGTS VERTS \u00c9CHOU\u00c9**
 Herbalism.Ability.GTh.Stage=[[RED]]Green Thumb Stage: [[YELLOW]] Crops grow in stage {0}
 Herbalism.Ability.GTh=[[GREEN]]**DOIGTS VERTS**
@@ -136,7 +136,7 @@ Mining.Effect.7=Augmente le rayon d\'explosion de la TNT
 Mining.Effect.8=Expert en d\u00e9molition
 Mining.Effect.9=R\u00e9duit les d\u00e9g\u00e2ts provenant de la TNT
 Mining.Effect.Decrease=[[RED]]Demolitions Expert Damage Decrease: [[YELLOW]]{0}
-Mining.Effect.DropChance=[[RED]]Chance de double drop : [[YELLOW]]{0}%
+Mining.Effect.DropChance=[[RED]]Chance de double drop : [[YELLOW]]{0}
 Mining.Listener=Minage :
 Mining.SkillName=MINAGE
 Mining.Skills.SuperBreaker.Off=[[RED]]**Votre comp\u00e9tence Broyeur est termin\u00e9e**
@@ -146,14 +146,14 @@ Mining.Skills.SuperBreaker.Other.On=[[GREEN]]{0}[[DARK_GREEN]] a utilis\u00e9 [[
 Mining.Skills.SuperBreaker.Refresh=[[GREEN]]Votre comp\u00e9tence [[YELLOW]]Broyeur [[GREEN]]est pr\u00eate !
 Mining.Skillup=[[YELLOW]]Le talent Minage augmente de {0}. Total ({1})
 Mining.Blast.Boom=[[GRAY]]**BOUM**
-Mining.Blast.Effect.0=+35% de rendement
-Mining.Blast.Effect.1=+40% de rendement
-Mining.Blast.Effect.2=+45% de rendement, pas de d\u00e9bris
-Mining.Blast.Effect.3=+50% de rendement, pas de d\u00e9bris
-Mining.Blast.Effect.4=+55% de rendement, pas de d\u00e9bris, double drops
-Mining.Blast.Effect.5=+60% de rendement, pas de d\u00e9bris, double drops
-Mining.Blast.Effect.6=+65% de rendement, pas de d\u00e9bris, triple drops
-Mining.Blast.Effect.7=+70% de rendement, pas de d\u00e9bris, triple drops
+Mining.Blast.Effect.0=+35 de rendement
+Mining.Blast.Effect.1=+40 de rendement
+Mining.Blast.Effect.2=+45 de rendement, pas de d\u00e9bris
+Mining.Blast.Effect.3=+50 de rendement, pas de d\u00e9bris
+Mining.Blast.Effect.4=+55 de rendement, pas de d\u00e9bris, double drops
+Mining.Blast.Effect.5=+60 de rendement, pas de d\u00e9bris, double drops
+Mining.Blast.Effect.6=+65 de rendement, pas de d\u00e9bris, triple drops
+Mining.Blast.Effect.7=+70 de rendement, pas de d\u00e9bris, triple drops
 Mining.Blast.Radius.Increase=[[RED]]Rayon d\'explosion : [[YELLOW]]+{0}
 Mining.Blast.Rank=[[RED]]Minage explosif : [[YELLOW]]Rang {0}/8 [[GRAY]]({1})
 Mining.Blast.Other.On=[[GREEN]]{0}[[DARK_GREEN]] a utilis\u00e9 [[RED]]Minage explosif !
@@ -190,12 +190,12 @@ Repair.Skills.FeltEasy=[[GRAY]]Plut\u00f4t facile.
 Repair.Skills.FullDurability=[[GRAY]]C\'est d\u00e9j\u00e0 r\u00e9par\u00e9.
 Repair.Skills.SalvageSuccess=[[GRAY]]Item salvaged!
 Repair.Skills.NotFullDurability=[[DARK_RED]]You can\'t salvage damaged items.
-Repair.Skills.Mastery=[[RED]]Ma\u00eetrise du forgeage : [[YELLOW]]Durabilit\u00e9 restaur\u00e9e augment\u00e9e de {0}%
+Repair.Skills.Mastery=[[RED]]Ma\u00eetrise du forgeage : [[YELLOW]]Durabilit\u00e9 restaur\u00e9e augment\u00e9e de {0}
 Repair.Skills.StackedItems=[[DARK_RED]]Vous ne pouvez pas r\u00e9parer les objets empil\u00e9s.
-Repair.Skills.Super.Chance=[[RED]]Probabilit\u00e9 de superbe r\u00e9paration : [[YELLOW]]{0}%
+Repair.Skills.Super.Chance=[[RED]]Probabilit\u00e9 de superbe r\u00e9paration : [[YELLOW]]{0}
 Repair.Skillup=[[YELLOW]]Le talent R\u00e9paration augmente de {0}. Total ({1})
-Repair.Arcane.Chance.Downgrade=[[GRAY]]Forge arcanique, chance de d\u00e9gradation : [[YELLOW]]{0}%
-Repair.Arcane.Chance.Success=[[GRAY]]Forge arcanique, taux de succ\u00e8s : [[YELLOW]]{0}%
+Repair.Arcane.Chance.Downgrade=[[GRAY]]Forge arcanique, chance de d\u00e9gradation : [[YELLOW]]{0}
+Repair.Arcane.Chance.Success=[[GRAY]]Forge arcanique, taux de succ\u00e8s : [[YELLOW]]{0}
 Repair.Arcane.Downgrade=[[RED]]Les \u00e9nergies arcaniques ont \u00e9t\u00e9 affaiblies sur cet objet.
 Repair.Arcane.Fail=[[RED]]Les \u00e9nergies arcaniques ont quitt\u00e9 cet objet.
 Repair.Arcane.Lost=[[RED]]Vous n\'\u00e9tiez pas suffisamment comp\u00e9tent pour pr\u00e9server les enchantements.
@@ -203,20 +203,20 @@ Repair.Arcane.Perfect=[[GREEN]]Vous avez pr\u00e9serv\u00e9 les \u00e9nergies ar
 Repair.Arcane.Rank=[[RED]]Forge arcanique : [[YELLOW]]Rang {0}/4
 Swords.Ability.Lower=[[GRAY]]**VOUS ABAISSEZ VOTRE \u00c9P\u00c9E**
 Swords.Ability.Ready=[[GREEN]]**VOUS LEVEZ VOTRE \u00c9P\u00c9E**
-Swords.Combat.Bleed.Chance=[[RED]]Bleed Chance: [[YELLOW]]{0}%
+Swords.Combat.Bleed.Chance=[[RED]]Bleed Chance: [[YELLOW]]{0}
 Swords.Combat.Bleed.Length=[[RED]]Dur\u00e9e de saignement : [[YELLOW]]{0} ticks
 Swords.Combat.Bleed.Note=[[GRAY]]NOTE : [[YELLOW]]1 tick toutes les 2 secondes
 Swords.Combat.Bleeding.Started=[[DARK_RED]] You\'re bleeding!
 Swords.Combat.Bleeding.Stopped=[[GRAY]]Le saignement s\'est [[GREEN]]arr\u00eat\u00e9[[GRAY]] !
 Swords.Combat.Bleeding=[[GREEN]]**L\'ENNEMI SAIGNE**
-Swords.Combat.Counter.Chance=[[RED]]Chance de contre-attaque : [[YELLOW]]{0}%
+Swords.Combat.Counter.Chance=[[RED]]Chance de contre-attaque : [[YELLOW]]{0}
 Swords.Combat.Counter.Hit=[[DARK_RED]]Touch\u00e9 par une contre-attaque !
 Swords.Combat.Countered=[[GREEN]]**CONTRE-ATTAQUE**
 Swords.Combat.SS.Struck=[[DARK_RED]]Frapp\u00e9 par ATTAQUE D\u00c9CHIRANTE !
 Swords.Effect.0=Contre-attaque
-Swords.Effect.1=Renvoie 50% des d\u00e9g\u00e2ts re\u00e7us
+Swords.Effect.1=Renvoie 50 des d\u00e9g\u00e2ts re\u00e7us
 Swords.Effect.2=Attaque d\u00e9chirante (Comp\u00e9tence)
-Swords.Effect.3=25% de d\u00e9g\u00e2ts + saignement de zone
+Swords.Effect.3=25 de d\u00e9g\u00e2ts + saignement de zone
 Swords.Effect.4=Saignement d\'Attaque d\u00e9chirante
 Swords.Effect.5=5 ticks
 Swords.Effect.6=Saignement
@@ -239,13 +239,13 @@ Taming.Ability.Bonus.5=Les explosifs font 1/6\u00e8me de leurs d\u00e9g\u00e2ts
 Taming.Ability.Bonus.6=Griffes ac\u00e9r\u00e9es
 Taming.Ability.Bonus.7=+2 de d\u00e9g\u00e2ts
 Taming.Ability.Bonus.8=Fast food
-Taming.Ability.Bonus.9={0}% Chance for heal on attack
+Taming.Ability.Bonus.9={0} Chance for heal on attack
 Taming.Ability.Locked.0=LOCKED UNTIL {0}+ SKILL (ENVIRONMENTALLY AWARE)
 Taming.Ability.Locked.1=LOCKED UNTIL {0}+ SKILL (THICK FUR)
 Taming.Ability.Locked.2=LOCKED UNTIL {0}+ SKILL (SHOCK PROOF)
 Taming.Ability.Locked.3=LOCKED UNTIL {0}+ SKILL (SHARPENED CLAWS)
 Taming.Ability.Locked.4=LOCKED UNTIL {0}+ SKILL (FAST FOOD SERVICE)
-Taming.Combat.Chance.Gore=[[RED]]Chance de morsure : [[YELLOW]]{0}%
+Taming.Combat.Chance.Gore=[[RED]]Chance de morsure : [[YELLOW]]{0}
 Taming.Effect.0=Connaissances des b\u00eates
 Taming.Effect.1=Bone-whacking inspects wolves & ocelots
 Taming.Effect.10=R\u00e9sistance aux chocs
@@ -274,12 +274,12 @@ Taming.Summon.Fail.Wolf=[[RED]]Il y a d\u00e9j\u00e0 trop de loups dans les envi
 Unarmed.Ability.Berserk.Length=[[RED]]Dur\u00e9e de Berserk : [[YELLOW]]{0}s
 Unarmed.Ability.Bonus.0=Poings de fer
 Unarmed.Ability.Bonus.1=+{0} de d\u00e9g\u00e2ts
-Unarmed.Ability.Chance.ArrowDeflect=[[RED]]Chance de d\u00e9viation de fl\u00e8che : [[YELLOW]]{0}%
-Unarmed.Ability.Chance.Disarm=[[RED]]Chance de d\u00e9sarmement : [[YELLOW]]{0}%
+Unarmed.Ability.Chance.ArrowDeflect=[[RED]]Chance de d\u00e9viation de fl\u00e8che : [[YELLOW]]{0}
+Unarmed.Ability.Chance.Disarm=[[RED]]Chance de d\u00e9sarmement : [[YELLOW]]{0}
 Unarmed.Ability.Lower=[[GRAY]]**VOUS ABAISSEZ VOS POINGS**
 Unarmed.Ability.Ready=[[GREEN]]**VOUS LEVEZ VOS POINGS**
 Unarmed.Effect.0=Berserk (Comp\u00e9tence)
-Unarmed.Effect.1=+50% de d\u00e9g\u00e2ts, casse les mat\u00e9riaux souples
+Unarmed.Effect.1=+50 de d\u00e9g\u00e2ts, casse les mat\u00e9riaux souples
 Unarmed.Effect.2=D\u00e9sarmement (sur joueurs)
 Unarmed.Effect.3=Fait tomber l\'arme des ennemis
 Unarmed.Effect.4=Poings de fer
@@ -296,7 +296,7 @@ Unarmed.Skills.Berserk.Refresh=[[GREEN]]Votre comp\u00e9tence [[YELLOW]]Berserk 
 Unarmed.Skillup=[[YELLOW]]Le talent Poings augmente de {0}. Total ({1})
 Woodcutting.Ability.0=Soufflage
 Woodcutting.Ability.1=Cong\u00e9s de coup
-Woodcutting.Ability.Chance.DDrop=[[RED]]Chance de double drop : [[YELLOW]]{0}%
+Woodcutting.Ability.Chance.DDrop=[[RED]]Chance de double drop : [[YELLOW]]{0}
 Woodcutting.Ability.Length=[[RED]]Dur\u00e9e d\'Abbateur : [[YELLOW]]{0}s
 Woodcutting.Ability.Locked.0=LOCKED UNTIL {0}+ SKILL (LEAF BLOWER)
 Woodcutting.Effect.0=Abatteur (Comp\u00e9tence)
@@ -462,9 +462,9 @@ Stats.Own.Stats=[[GREEN]][mcMMO] Statistiques
 Perks.xp.name=Experience
 Perks.xp.desc=Receive {0}x XP.
 Perks.lucky.name=Luck
-Perks.lucky.desc=Gives {0} skills and abilities a 33.3% better chance to activate.
-Perks.lucky.desc.login=Gives certain skills and abilities a 33.3% better chance to activate.
-Perks.lucky.bonus=[[GOLD]] ({0}% with Lucky Perk)
+Perks.lucky.desc=Gives {0} skills and abilities a 33.3 better chance to activate.
+Perks.lucky.desc.login=Gives certain skills and abilities a 33.3 better chance to activate.
+Perks.lucky.bonus=[[GOLD]] ({0} with Lucky Perk)
 Perks.cooldowns.name=Fast Recovery
 Perks.cooldowns.desc=Cuts cooldown duration by {0}.
 Perks.activationtime.name=Endurance
