--- a/src/main/resources/locale/locale_it.properties
+++ b/src/main/resources/locale/locale_it.properties
@@ -1,6 +1,6 @@
 Acrobatics.Ability.Proc=[[GREEN]]**Atterraggio Aggraziato**
 Acrobatics.Combat.Proc=[[GREEN]]**Schivato**
-Acrobatics.DodgeChance=[[RED]]Probabilit\u00e0 di Schivata: [[YELLOW]]{0}%
+Acrobatics.DodgeChance=[[RED]]Probabilit\u00e0 di Schivata: [[YELLOW]]{0}
 Acrobatics.Effect.0=Capriola
 Acrobatics.Effect.1=Riduce o annulla il danno da caduta
 Acrobatics.Effect.2=Capriola Aggraziata
@@ -8,13 +8,13 @@ Acrobatics.Effect.3=Il doppio pi\u00f9 efficiente di una normale Capriola
 Acrobatics.Effect.4=Schivata
 Acrobatics.Effect.5=Riduce il danno degli attacchi della met\u00e0
 Acrobatics.Listener=Acrobatica:
-Acrobatics.Roll.Chance=[[RED]]Probabilit\u00e0 di Capriola: [[YELLOW]]{0}%
-Acrobatics.Roll.GraceChance=[[RED]]Probabilit\u00e0 di Capriola Aggraziata: [[YELLOW]]{0}%
+Acrobatics.Roll.Chance=[[RED]]Probabilit\u00e0 di Capriola: [[YELLOW]]{0}
+Acrobatics.Roll.GraceChance=[[RED]]Probabilit\u00e0 di Capriola Aggraziata: [[YELLOW]]{0}
 Acrobatics.Roll.Text=**Capriola Eseguita**
 Acrobatics.SkillName=ACROBATICA
 Acrobatics.Skillup=[[YELLOW]]L\'abilit\u00e0 Acrobatica \u00e8 aumentata di {0}. Totale ({1})
-Archery.Combat.DazeChance=[[RED]]Probabilit\u00e0 di Stordire: [[YELLOW]]{0}%
-Archery.Combat.RetrieveChance=[[RED]]Probabilit\u00e0 di Recuperare Frecce: [[YELLOW]]{0}%
+Archery.Combat.DazeChance=[[RED]]Probabilit\u00e0 di Stordire: [[YELLOW]]{0}
+Archery.Combat.RetrieveChance=[[RED]]Probabilit\u00e0 di Recuperare Frecce: [[YELLOW]]{0}
 Archery.Combat.SkillshotBonus=[[RED]]Bonus al Danno di Tiro da Maestro: [[YELLOW]]{0}
 Archery.Effect.0=Tiro da Maestro
 Archery.Effect.1=Aumenta il danno fatto con gli archi
@@ -35,7 +35,7 @@ Axes.Ability.Lower=[[GRAY]]**ABBASSI L\'ASCIA**
 Axes.Ability.Ready=[[GREEN]]**PREPARI L\'ASCIA**
 Axes.Combat.Cleave.Proc=[[DARK_RED]]Colpito da SFONDAMENTO!
 Axes.Combat.CritStruck=[[DARK_RED]]Hai subito un colpo CRITICO!
-Axes.Combat.CritChance=[[RED]]Probabilit\u00e0 di un colpo critico: [[YELLOW]]{0}%
+Axes.Combat.CritChance=[[RED]]Probabilit\u00e0 di un colpo critico: [[YELLOW]]{0}
 Axes.Combat.CriticalHit=[[RED]]COLPO CRITICO!
 Axes.Combat.GI.Proc=[[GREEN]]**COLPITO DA UNA GRANDE FORZA**
 Axes.Combat.GI.Struck=[[RED]]**COLPITO DA IMPATTO MAGGIORE**
@@ -76,7 +76,7 @@ Excavation.Skillup=[[YELLOW]]L\'abilit\u00e0 Escavazione \u00e8 aumentata di {0}
 Fishing.Ability.Info=[[RED]]Cacciatore di Magia: [[GRAY]] **Migliora insieme al Grado di Cacciatore di Tesori**
 Fishing.Ability.Locked.0=BLOCCATO FINO AD ABILIT\u00c0 {0}+ (SCUOTERE)
 Fishing.Ability.Rank=[[RED]]Grado di Cacciatore di Tesori: [[YELLOW]]{0}/5
-Fishing.Ability.Shake=[[RED]]Probabilit\u00e0 di Scuotere: [[YELLOW]]{0}%
+Fishing.Ability.Shake=[[RED]]Probabilit\u00e0 di Scuotere: [[YELLOW]]{0}
 Fishing.Ability.FD=[[RED]]Dieta del Pescatore: [[YELLOW]]Grado {0}
 Fishing.Effect.0=Cacciatore di Tesori (Passivo)
 Fishing.Effect.1=Ripesca oggetti vari
@@ -92,10 +92,10 @@ Fishing.Listener=Pesca:
 Fishing.MagicFound=[[GRAY]]Senti un tocco di magia in questa cattura...
 Fishing.SkillName=PESCA
 Fishing.Skillup=[[YELLOW]]L\'abilit\u00e0 Pesca \u00e8 aumentata di {0}. Totale ({1})
-Herbalism.Ability.DoubleDropChance=[[RED]]Probabilit\u00e0 di Doppio Drop: [[YELLOW]]{0}%
+Herbalism.Ability.DoubleDropChance=[[RED]]Probabilit\u00e0 di Doppio Drop: [[YELLOW]]{0}
 Herbalism.Ability.FD=[[RED]]Dieta del Contadino: [[YELLOW]]Grado {0}
 Herbalism.Ability.GTe.Length=[[RED]]Durata di Terra Verde: [[YELLOW]]{0}s
-Herbalism.Ability.GTh.Chance=[[RED]]Probabilit\u00e0 di Pollice Verde: [[YELLOW]]{0}%
+Herbalism.Ability.GTh.Chance=[[RED]]Probabilit\u00e0 di Pollice Verde: [[YELLOW]]{0}
 Herbalism.Ability.GTh.Fail=[[RED]]**POLLICE VERDE FALLITO**
 Herbalism.Ability.GTh.Stage=[[RED]]Stadio di Pollice Verde: [[YELLOW]] Il raccolto cresce allo stadio {0}
 Herbalism.Ability.GTh=[[GREEN]]**POLLICE VERDE**
@@ -136,7 +136,7 @@ Mining.Effect.7=Incrementa il raggio di esplosione del TNT
 Mining.Effect.8=Perizia nelle Demolizioni
 Mining.Effect.9=Riduce il danno da esplosioni di TNT
 Mining.Effect.Decrease=[[RED]]Riduzione del Danno da Esperto di Demolizioni: [[YELLOW]]{0}
-Mining.Effect.DropChance=[[RED]]Probabilit\u00e0 di Doppio Drop: [[YELLOW]]{0}%
+Mining.Effect.DropChance=[[RED]]Probabilit\u00e0 di Doppio Drop: [[YELLOW]]{0}
 Mining.Listener=Estrazione
 Mining.SkillName=ESTRAZIONE
 Mining.Skills.SuperBreaker.Off=[[RED]]**Super Demolitore si \u00e8 esaurito**
@@ -146,14 +146,14 @@ Mining.Skills.SuperBreaker.Other.On=[[GREEN]]{0}[[DARK_GREEN]] ha usato [[RED]]S
 Mining.Skills.SuperBreaker.Refresh=[[GREEN]]La tua capacit\u00e0 [[YELLOW]]Super Demolitore [[GREEN]]si \u00e8 rigenerata!
 Mining.Skillup=[[YELLOW]]L\'abilit\u00e0 Estrazione \u00e8 aumentata di {0}. Totale ({1})
 Mining.Blast.Boom=[[GRAY]]**BOOM**
-Mining.Blast.Effect.0=+35% minerali estratti
-Mining.Blast.Effect.1=+40% minerali estratti
-Mining.Blast.Effect.2=+45% minerali estratti, niente macerie
-Mining.Blast.Effect.3=+50% minerali estratti, niente macerie
-Mining.Blast.Effect.4=+55% minerali estratti, niente macerie, doppi drop.
-Mining.Blast.Effect.5=+60% minerali estratti, niente macerie, doppi drop.
-Mining.Blast.Effect.6=+65% minerali estratti, niente macerie, tripli drop.
-Mining.Blast.Effect.7=+70% minerali estratti, niente macerie, tripli drop.
+Mining.Blast.Effect.0=+35 minerali estratti
+Mining.Blast.Effect.1=+40 minerali estratti
+Mining.Blast.Effect.2=+45 minerali estratti, niente macerie
+Mining.Blast.Effect.3=+50 minerali estratti, niente macerie
+Mining.Blast.Effect.4=+55 minerali estratti, niente macerie, doppi drop.
+Mining.Blast.Effect.5=+60 minerali estratti, niente macerie, doppi drop.
+Mining.Blast.Effect.6=+65 minerali estratti, niente macerie, tripli drop.
+Mining.Blast.Effect.7=+70 minerali estratti, niente macerie, tripli drop.
 Mining.Blast.Radius.Increase=[[RED]]Incremento del Raggio di Esplosione: [[YELLOW]]+{0}
 Mining.Blast.Rank=[[RED]]Estrazione Esplosiva: [[YELLOW]] Grado {0}/8 [[GRAY]]({1})
 Mining.Blast.Other.On=[[GREEN]]{0}[[DARK_GREEN]] ha usato [[RED]]Estrazione Esplosiva!
@@ -190,12 +190,12 @@ Repair.Skills.FeltEasy=[[GRAY]]Ti \u00e8 sembrato facile.
 Repair.Skills.FullDurability=[[GRAY]]\u00c8 gi\u00e0 a piena durevolezza.
 Repair.Skills.SalvageSuccess=[[GRAY]]Oggetto rottamato!
 Repair.Skills.NotFullDurability=[[DARK_RED]]Non puoi rottamare oggetti danneggiati.
-Repair.Skills.Mastery=[[RED]]Maestria nella Riparazione: [[YELLOW]]Recuperato il {0}% di durevolezza aggiuntiva
+Repair.Skills.Mastery=[[RED]]Maestria nella Riparazione: [[YELLOW]]Recuperato il {0} di durevolezza aggiuntiva
 Repair.Skills.StackedItems=[[DARK_RED]]Non puoi riparare oggetti ammucchiati.
-Repair.Skills.Super.Chance=[[RED]]Probabilit\u00e0 di Super Riparazione: [[YELLOW]]{0}%
+Repair.Skills.Super.Chance=[[RED]]Probabilit\u00e0 di Super Riparazione: [[YELLOW]]{0}
 Repair.Skillup=[[YELLOW]]L\'abilit\u00e0 Riparazione \u00e8 aumentata di {0}. Totale ({1})
-Repair.Arcane.Chance.Downgrade=[[GRAY]]Probabilit\u00e0 di Degradazione di FA: [[YELLOW]]{0}%
-Repair.Arcane.Chance.Success=[[GRAY]]Tasso di Successo di FA: [[YELLOW]]{0}%
+Repair.Arcane.Chance.Downgrade=[[GRAY]]Probabilit\u00e0 di Degradazione di FA: [[YELLOW]]{0}
+Repair.Arcane.Chance.Success=[[GRAY]]Tasso di Successo di FA: [[YELLOW]]{0}
 Repair.Arcane.Downgrade=[[RED]]Il potere arcano di questo oggetto \u00e8 diminuito.
 Repair.Arcane.Fail=[[RED]]Il potere arcano ha abbandonato l\'oggetto permanentemente.
 Repair.Arcane.Lost=[[RED]]Non sei stato abbastanza abile da mantenere alcun incantesimo.
@@ -203,20 +203,20 @@ Repair.Arcane.Perfect=[[GREEN]]Hai mantenuto le energie arcane in questo oggetto
 Repair.Arcane.Rank=[[RED]]Forgiatura Arcana: [[YELLOW]]Grado {0}/4
 Swords.Ability.Lower=[[GRAY]]**ABBASSI LA SPADA**
 Swords.Ability.Ready=[[GREEN]]**PREPARI LA SPADA**
-Swords.Combat.Bleed.Chance=[[RED]]Probabilit\u00e0 di Emorragia: [[YELLOW]]{0}%
+Swords.Combat.Bleed.Chance=[[RED]]Probabilit\u00e0 di Emorragia: [[YELLOW]]{0}
 Swords.Combat.Bleed.Length=[[RED]]Durata di Emorragia: [[YELLOW]]{0} tick
 Swords.Combat.Bleed.Note=[[GRAY]]Nota: [[YELLOW]]1 Tick si verifica ogni 2 secondi
 Swords.Combat.Bleeding.Started=[[DARK_RED]] Hai un\'emorragia!
 Swords.Combat.Bleeding.Stopped=[[GRAY]]L\'emorragia si \u00e8 [[GREEN]]fermata[[GRAY]]!
 Swords.Combat.Bleeding=[[GREEN]]**IL NEMICO HA UN\'EMORRAGIA**
-Swords.Combat.Counter.Chance=[[RED]]Probabilit\u00e0 di Contrattacco: [[YELLOW]]{0}%
+Swords.Combat.Counter.Chance=[[RED]]Probabilit\u00e0 di Contrattacco: [[YELLOW]]{0}
 Swords.Combat.Counter.Hit=[[DARK_RED]]Colpisci on un contrattacco!
 Swords.Combat.Countered=[[GREEN]]**CONTRATTACCATO**
 Swords.Combat.SS.Struck=[[DARK_RED]]Colpito da COLPI SEGHETTATI!
 Swords.Effect.0=Contrattacco
-Swords.Effect.1=Riflette il 50% del danno subito
+Swords.Effect.1=Riflette il 50 del danno subito
 Swords.Effect.2=Colpi Seghettati (CAPACITA\')
-Swords.Effect.3=+25% Danno ad Area, Emorragia+ ad Area
+Swords.Effect.3=+25 Danno ad Area, Emorragia+ ad Area
 Swords.Effect.4=Colpi Seghettati Emorragia+
 Swords.Effect.5=Emorragia da 5 Tick
 Swords.Effect.6=Emorragia
@@ -239,13 +239,13 @@ Taming.Ability.Bonus.5=Gli esplosivi fanno 1/6 del normale danno
 Taming.Ability.Bonus.6=Artigli Affilati
 Taming.Ability.Bonus.7=+2 al Danno
 Taming.Ability.Bonus.8=Servizio Fast Food
-Taming.Ability.Bonus.9={0}% Probabilit\u00e0 di guarire quando si attacca
+Taming.Ability.Bonus.9={0} Probabilit\u00e0 di guarire quando si attacca
 Taming.Ability.Locked.0=BLOCCATO FINO AD ABILIT\u00c0 {0}+ (SICUREZZA AMBIENTALE)
 Taming.Ability.Locked.1=BLOCCATO FINO AD ABILIT\u00c0 {0}+ (PELLICCIA FOLTA)
 Taming.Ability.Locked.2=BLOCCATO FINO AD ABILIT\u00c0 {0}+ (A PROVA D\'URTO)
 Taming.Ability.Locked.3=BLOCCATO FINO AD ABILIT\u00c0 {0}+ (ARTIGLI AFFILATI)
 Taming.Ability.Locked.4=BLOCCATO FINO AD ABILIT\u00c0 {0}+ (SERVIZIO FAST FOOD)
-Taming.Combat.Chance.Gore=[[RED]]Probabilit\u00e0 di Sbranare: [[YELLOW]]{0}%
+Taming.Combat.Chance.Gore=[[RED]]Probabilit\u00e0 di Sbranare: [[YELLOW]]{0}
 Taming.Effect.0=Conoscenza delle Bestie
 Taming.Effect.1=Esamina lupi e ocelot picchiandoli con un osso
 Taming.Effect.10=A Prova d\'Urto
@@ -274,12 +274,12 @@ Taming.Summon.Fail.Wolf=[[RED]]Hai troppi lupi vicino per poterne evocare degli 
 Unarmed.Ability.Berserk.Length=[[RED]]Durata di Furore: [[YELLOW]]{0} s
 Unarmed.Ability.Bonus.0=Stile del Braccio di Ferro
 Unarmed.Ability.Bonus.1=Potenziamento Danno +{0}
-Unarmed.Ability.Chance.ArrowDeflect=[[RED]]Probabilit\u00e0 di Deviare Freccia: [[YELLOW]]{0}%
-Unarmed.Ability.Chance.Disarm=[[RED]]Probabilit\u00e0 di Disarmare: [[YELLOW]]{0}%
+Unarmed.Ability.Chance.ArrowDeflect=[[RED]]Probabilit\u00e0 di Deviare Freccia: [[YELLOW]]{0}
+Unarmed.Ability.Chance.Disarm=[[RED]]Probabilit\u00e0 di Disarmare: [[YELLOW]]{0}
 Unarmed.Ability.Lower=[[GRAY]]**ABBASSI I PUGNI**
 Unarmed.Ability.Ready=[[GREEN]]**PREPARI I PUGNI**
 Unarmed.Effect.0=Furore (Capacit\u00e0)
-Unarmed.Effect.1=+50% Danni, Rompe materiali fragili
+Unarmed.Effect.1=+50 Danni, Rompe materiali fragili
 Unarmed.Effect.2=Disarmare (Giocatore)
 Unarmed.Effect.3=Fa cadere l\'oggetto tenuto in mano dal nemico
 Unarmed.Effect.4=Stile del Braccio di Ferro
@@ -296,7 +296,7 @@ Unarmed.Skills.Berserk.Refresh=[[GREEN]]La tua capacit\u00e0 [[YELLOW]]Furore [[
 Unarmed.Skillup=[[YELLOW]]L\'abilit\u00e0 Lotta \u00e8 aumentata di {0}. Totale ({1})
 Woodcutting.Ability.0=Soffia Foglie
 Woodcutting.Ability.1=Soffia via le foglie
-Woodcutting.Ability.Chance.DDrop=[[RED]]Probabilit\u00e0 di Doppio Drop: [[YELLOW]]{0}%
+Woodcutting.Ability.Chance.DDrop=[[RED]]Probabilit\u00e0 di Doppio Drop: [[YELLOW]]{0}
 Woodcutting.Ability.Length=[[RED]]Durata di Abbatti Alberi: [[YELLOW]]{0} s
 Woodcutting.Ability.Locked.0=BLOCCATO FINO AD ABILIT\u00c0 {0}+ (SOFFIA FOGLIE)
 Woodcutting.Effect.0=Abbattitore d\'Alberi (CAPACITA\')
@@ -462,9 +462,9 @@ Stats.Own.Stats=[[GREEN]]Statistiche [mcMMO]
 Perks.xp.name=Esperienza
 Perks.xp.desc=Ricevi {0}x XP.
 Perks.lucky.name=Fortuna
-Perks.lucky.desc=Aumenta del 33% le probabilit\u00e0 di attivarsi delle abilit\u00e0 e capacit\u00e0 di {0}.
-Perks.lucky.desc.login=Aumenta del 33% le probabilit\u00e0 di attivarsi di certe abilit\u00e0 e capacit\u00e0.
-Perks.lucky.bonus=[[GOLD]] ({0}% with Lucky Perk)
+Perks.lucky.desc=Aumenta del 33 le probabilit\u00e0 di attivarsi delle abilit\u00e0 e capacit\u00e0 di {0}.
+Perks.lucky.desc.login=Aumenta del 33 le probabilit\u00e0 di attivarsi di certe abilit\u00e0 e capacit\u00e0.
+Perks.lucky.bonus=[[GOLD]] ({0} with Lucky Perk)
 Perks.cooldowns.name=Recupero Rapido
 Perks.cooldowns.desc=Riduce la durata del raffreddamento di {0}.
 Perks.activationtime.name=Resistenza
