--- a/src/main/resources/locale/locale_no.properties
+++ b/src/main/resources/locale/locale_no.properties
@@ -1,6 +1,6 @@
 Acrobatics.Ability.Proc=[[GREEN]]**Graceful Landing**
 Acrobatics.Combat.Proc=[[GREEN]]**Dukket unna**
-Acrobatics.DodgeChance=[[RED]]Dodge Chance: [[YELLOW]]{0}%
+Acrobatics.DodgeChance=[[RED]]Dodge Chance: [[YELLOW]]{0}
 Acrobatics.Effect.0=Roll
 Acrobatics.Effect.1=Reduces or Negates fall damage
 Acrobatics.Effect.2=Graceful Roll
@@ -8,13 +8,13 @@ Acrobatics.Effect.3=Twice as effective as a normal Roll
 Acrobatics.Effect.4=Dodge
 Acrobatics.Effect.5=Reduce attack damage by half
 Acrobatics.Listener=Acrobatics:
-Acrobatics.Roll.Chance=[[RED]]Roll Chance: [[YELLOW]]{0}%
-Acrobatics.Roll.GraceChance=[[RED]]Graceful Roll Chance: [[YELLOW]]{0}%
+Acrobatics.Roll.Chance=[[RED]]Roll Chance: [[YELLOW]]{0}
+Acrobatics.Roll.GraceChance=[[RED]]Graceful Roll Chance: [[YELLOW]]{0}
 Acrobatics.Roll.Text=**Rolled**
 Acrobatics.SkillName=AKROBATIKK 
 Acrobatics.Skillup=[[YELLOW]]Akrobatiske ferdigheter har blitt h\u00f8ynet med {0}. Total ({1})
-Archery.Combat.DazeChance=[[RED]]Chance to Daze: [[YELLOW]]{0}%
-Archery.Combat.RetrieveChance=[[RED]]Sjanse til \u00e5 hente Arrows: [[YELLOW]]{0}%
+Archery.Combat.DazeChance=[[RED]]Chance to Daze: [[YELLOW]]{0}
+Archery.Combat.RetrieveChance=[[RED]]Sjanse til \u00e5 hente Arrows: [[YELLOW]]{0}
 Archery.Combat.SkillshotBonus=[[RED]]Skill Shot Bonus Damage: [[YELLOW]]{0}
 Archery.Effect.0=Skill Shot
 Archery.Effect.1=Increases damage done with bows
@@ -35,7 +35,7 @@ Axes.Ability.Lower=[[GRAY]]**YOU LOWER YOUR AXE**
 Axes.Ability.Ready=[[GREEN]]**YOU READY YOUR AXE**
 Axes.Combat.Cleave.Proc=[[DARK_RED]]Struck by CLEAVE!
 Axes.Combat.CritStruck=[[DARK_RED]]You were CRITICALLY hit!
-Axes.Combat.CritChance=[[RED]]Chance to critically strike: [[YELLOW]]{0}%
+Axes.Combat.CritChance=[[RED]]Chance to critically strike: [[YELLOW]]{0}
 Axes.Combat.CriticalHit=[[RED]]CRITICAL HIT!
 Axes.Combat.GI.Proc=[[GREEN]]**STRUCK WITH GREAT FORCE**
 Axes.Combat.GI.Struck=[[RED]]** Rammet av st\u00f8rre innvirkning **
@@ -76,7 +76,7 @@ Excavation.Skillup=[[YELLOW]]Excavation skill increased by {0}. Total ({1})
 Fishing.Ability.Info=[[RED]]Magic Hunter: [[GRAY]] **Improves With Treasure Hunter Rank**
 Fishing.Ability.Locked.0=LOCKED UNTIL {0}+ SKILL (SHAKE)
 Fishing.Ability.Rank=[[RED]]Treasure Hunter Rank: [[YELLOW]]{0}/5
-Fishing.Ability.Shake=[[RED]]Shake Chance: [[YELLOW]]{0}%
+Fishing.Ability.Shake=[[RED]]Shake Chance: [[YELLOW]]{0}
 Fishing.Ability.FD=[[RED]]Fisherman\'\'s Diet: [[YELLOW]]Rank {0}
 Fishing.Effect.0=Treasure Hunter (Passive)
 Fishing.Effect.1=Fish up misc. objects
@@ -92,10 +92,10 @@ Fishing.Listener=Fishing:
 Fishing.MagicFound=[[GRAY]]You feel a touch of magic with this catch...
 Fishing.SkillName=FISHING
 Fishing.Skillup=[[YELLOW]]Fishing skill increased by {0}. Total ({1})
-Herbalism.Ability.DoubleDropChance=[[RED]]Double Drop Chance: [[YELLOW]]{0}%
+Herbalism.Ability.DoubleDropChance=[[RED]]Double Drop Chance: [[YELLOW]]{0}
 Herbalism.Ability.FD=[[RED]]Farmers Diet: [[YELLOW]]Rank {0}
 Herbalism.Ability.GTe.Length=[[RED]]Green Terra Length: [[YELLOW]]{0}s
-Herbalism.Ability.GTh.Chance=[[RED]]Green Thumb Chance: [[YELLOW]]{0}%
+Herbalism.Ability.GTh.Chance=[[RED]]Green Thumb Chance: [[YELLOW]]{0}
 Herbalism.Ability.GTh.Fail=[[RED]]**GREEN THUMB FAIL**
 Herbalism.Ability.GTh.Stage=[[RED]]Green Thumb Stage: [[YELLOW]] Crops grow in stage {0}
 Herbalism.Ability.GTh=[[GREEN]]**GREEN THUMB**
@@ -136,7 +136,7 @@ Mining.Effect.7=Increases TNT explosion radius
 Mining.Effect.8=Demolitions Expertise
 Mining.Effect.9=Decreases damage from TNT explosions
 Mining.Effect.Decrease=[[RED]]Demolitions Expert Damage Decrease: [[YELLOW]]{0}
-Mining.Effect.DropChance=[[RED]]Double Drop Chance: [[YELLOW]]{0}%
+Mining.Effect.DropChance=[[RED]]Double Drop Chance: [[YELLOW]]{0}
 Mining.Listener=Mining:
 Mining.SkillName=MINING
 Mining.Skills.SuperBreaker.Off=[[RED]]**Super Breaker has worn off**
@@ -146,14 +146,14 @@ Mining.Skills.SuperBreaker.Other.On=[[GREEN]]{0}[[DARK_GREEN]] has used [[RED]]S
 Mining.Skills.SuperBreaker.Refresh=[[GREEN]]Din [[yellow]] Super Breaker [[GREEN]] evne er oppdatert!
 Mining.Skillup=[[YELLOW]]Mining skill har \u00f8kt med {0}. Totalt ({1})
 Mining.Blast.Boom=[[GRAY]]**BOOM**
-Mining.Blast.Effect.0=+35% ore yield
-Mining.Blast.Effect.1=+40% ore yield
-Mining.Blast.Effect.2=+45% ore yield, no debris
-Mining.Blast.Effect.3=+50% ore yield, no debris
-Mining.Blast.Effect.4=+55% ore yield, no debris, double drops
-Mining.Blast.Effect.5=+60% ore yield, no debris, double drops
-Mining.Blast.Effect.6=+65% ore yield, no debris, triple drops
-Mining.Blast.Effect.7=+70% ore yield, no debris, triple drops
+Mining.Blast.Effect.0=+35 ore yield
+Mining.Blast.Effect.1=+40 ore yield
+Mining.Blast.Effect.2=+45 ore yield, no debris
+Mining.Blast.Effect.3=+50 ore yield, no debris
+Mining.Blast.Effect.4=+55 ore yield, no debris, double drops
+Mining.Blast.Effect.5=+60 ore yield, no debris, double drops
+Mining.Blast.Effect.6=+65 ore yield, no debris, triple drops
+Mining.Blast.Effect.7=+70 ore yield, no debris, triple drops
 Mining.Blast.Radius.Increase=[[RED]]Blast Radius Increase: [[YELLOW]]+{0}
 Mining.Blast.Rank=[[RED]]Blast Mining: [[YELLOW]] Rank {0}/8 [[GRAY]]({1})
 Mining.Blast.Other.On=[[GREEN]]{0}[[DARK_GREEN]] has used [[RED]]Blast Mining!
@@ -190,12 +190,12 @@ Repair.Skills.FeltEasy=[[GRAY]]That felt easy.
 Repair.Skills.FullDurability=[[GRAY]]That is at full durability.
 Repair.Skills.SalvageSuccess=[[GRAY]]Item salvaged!
 Repair.Skills.NotFullDurability=[[DARK_RED]]You can\'t salvage damaged items.
-Repair.Skills.Mastery=[[RED]]Repair Mastery: [[YELLOW]]Extra {0}% durability restored
+Repair.Skills.Mastery=[[RED]]Repair Mastery: [[YELLOW]]Extra {0} durability restored
 Repair.Skills.StackedItems=[[DARK_RED]]You can\'t repair stacked items.
-Repair.Skills.Super.Chance=[[RED]]Super Repair Chance: [[YELLOW]]{0}%
+Repair.Skills.Super.Chance=[[RED]]Super Repair Chance: [[YELLOW]]{0}
 Repair.Skillup=[[YELLOW]]ReparasjonS dyktighet \u00f8kt med {0}. Totalt ({1})
-Repair.Arcane.Chance.Downgrade=[[GRAY]]AF Downgrade Chance: [[YELLOW]]{0}%
-Repair.Arcane.Chance.Success=[[GRAY]]AF Suksess Rate: [[YELLOW]]{0}%
+Repair.Arcane.Chance.Downgrade=[[GRAY]]AF Downgrade Chance: [[YELLOW]]{0}
+Repair.Arcane.Chance.Success=[[GRAY]]AF Suksess Rate: [[YELLOW]]{0}
 Repair.Arcane.Downgrade=[[RED]]Arcane power has decreased for this item.
 Repair.Arcane.Fail=[[RED]]Arcane kraften har forlatt objektet permanent
 Repair.Arcane.Lost=[[RED]]You were not skilled enough to keep any enchantments.
@@ -203,20 +203,20 @@ Repair.Arcane.Perfect=[[GREEN]]You have sustained the arcane energies in this it
 Repair.Arcane.Rank=[[RED]]Arcane Forging: [[YELLOW]]Rank {0}/4
 Swords.Ability.Lower=[[GRAY]]**YOU LOWER YOUR SWORD**
 Swords.Ability.Ready=[[GREEN]]**YOU READY YOUR SWORD**
-Swords.Combat.Bleed.Chance=[[RED]]Bleed Chance: [[YELLOW]]{0}%
+Swords.Combat.Bleed.Chance=[[RED]]Bleed Chance: [[YELLOW]]{0}
 Swords.Combat.Bleed.Length=[[RED]]Bleed Length: [[YELLOW]]{0} ticks
 Swords.Combat.Bleed.Note=[[GRAY]]NOTE: [[YELLOW]]1 Tick happens every 2 seconds
 Swords.Combat.Bleeding.Started=[[DARK_RED]] You\'re bleeding!
 Swords.Combat.Bleeding.Stopped=[[GRAY]]Bl\u00f8dningen har [[GREEN]]stoppet[[GRAY]]!
 Swords.Combat.Bleeding=[[GREEN]]**FIENDE BL\u00d8R**
-Swords.Combat.Counter.Chance=[[RED]]Counter Attack Chance: [[YELLOW]]{0}%
+Swords.Combat.Counter.Chance=[[RED]]Counter Attack Chance: [[YELLOW]]{0}
 Swords.Combat.Counter.Hit=[[DARK_RED]]Hit with a counter-attack!
 Swords.Combat.Countered=[[GREEN]]** Motangrep **
 Swords.Combat.SS.Struck=[[DARK_RED]]Struck by SERRATED STRIKES!
 Swords.Effect.0=Counter Attack
-Swords.Effect.1=Reflect 50% of damage taken
+Swords.Effect.1=Reflect 50 of damage taken
 Swords.Effect.2=Serrated Strikes (ABILITY)
-Swords.Effect.3=25% DMG AoE, Bleed+ AoE
+Swords.Effect.3=25 DMG AoE, Bleed+ AoE
 Swords.Effect.4=Serrated Strikes Bleed+
 Swords.Effect.5=5 Tick Bleed
 Swords.Effect.6=Bleed
@@ -239,13 +239,13 @@ Taming.Ability.Bonus.5=Explosives do 1/6 normal damage
 Taming.Ability.Bonus.6=Sharpened Claws
 Taming.Ability.Bonus.7=+2 Damage
 Taming.Ability.Bonus.8=Fast Food Service
-Taming.Ability.Bonus.9={0}% Chance for heal on attack
+Taming.Ability.Bonus.9={0} Chance for heal on attack
 Taming.Ability.Locked.0=LOCKED UNTIL {0}+ SKILL (ENVIRONMENTALLY AWARE)
 Taming.Ability.Locked.1=LOCKED UNTIL {0}+ SKILL (THICK FUR)
 Taming.Ability.Locked.2=LOCKED UNTIL {0}+ SKILL (SHOCK PROOF)
 Taming.Ability.Locked.3=LOCKED UNTIL {0}+ SKILL (SHARPENED CLAWS)
 Taming.Ability.Locked.4=LOCKED UNTIL {0}+ SKILL (FAST FOOD SERVICE)
-Taming.Combat.Chance.Gore=[[RED]]Gore Chance: [[YELLOW]]{0}%
+Taming.Combat.Chance.Gore=[[RED]]Gore Chance: [[YELLOW]]{0}
 Taming.Effect.0=Beast Lore
 Taming.Effect.1=Bone-whacking inspects wolves & ocelots
 Taming.Effect.10=Shock Proof
@@ -274,12 +274,12 @@ Taming.Summon.Fail.Wolf=[[RED]]You have too many wolves nearby to summon any mor
 Unarmed.Ability.Berserk.Length=[[RED]]Berserk Length: [[YELLOW]]{0}s
 Unarmed.Ability.Bonus.0=Iron Arm Style
 Unarmed.Ability.Bonus.1=+{0} DMG Upgrade
-Unarmed.Ability.Chance.ArrowDeflect=[[RED]]Pil Avlednings Sjanse: [[YELLOW]]{0}%
-Unarmed.Ability.Chance.Disarm=[[RED]]Disarm Chance: [[YELLOW]]{0}%
+Unarmed.Ability.Chance.ArrowDeflect=[[RED]]Pil Avlednings Sjanse: [[YELLOW]]{0}
+Unarmed.Ability.Chance.Disarm=[[RED]]Disarm Chance: [[YELLOW]]{0}
 Unarmed.Ability.Lower=[[GRAY]]**YOU LOWER YOUR FISTS**
 Unarmed.Ability.Ready=[[GREEN]]**YOU READY YOUR FISTS**
 Unarmed.Effect.0=Berserk (ABILITY)
-Unarmed.Effect.1=+50% DMG, Breaks weak materials
+Unarmed.Effect.1=+50 DMG, Breaks weak materials
 Unarmed.Effect.2=Disarm (Players)
 Unarmed.Effect.3=Drops the foes item held in hand
 Unarmed.Effect.4=Iron Arm Style
@@ -296,7 +296,7 @@ Unarmed.Skills.Berserk.Refresh=[[GREEN]]Your [[YELLOW]]Berserk [[GREEN]]ability 
 Unarmed.Skillup=[[YELLOW]]Unarmed skill increased by {0}. Total ({1})
 Woodcutting.Ability.0=L\u00f8vbl\u00e5ser
 Woodcutting.Ability.1=Bl\u00e5s bort blader
-Woodcutting.Ability.Chance.DDrop=[[RED]]Double Drop Chance: [[YELLOW]]{0}%
+Woodcutting.Ability.Chance.DDrop=[[RED]]Double Drop Chance: [[YELLOW]]{0}
 Woodcutting.Ability.Length=[[RED]]Tree Feller Length: [[YELLOW]]{0}s
 Woodcutting.Ability.Locked.0=LOCKED UNTIL {0}+ SKILL (LEAF BLOWER)
 Woodcutting.Effect.0=Tree Feller (ABILITY)
@@ -462,9 +462,9 @@ Stats.Own.Stats=[[GREEN]][mcMMO] Stats
 Perks.xp.name=Experience
 Perks.xp.desc=Receive {0}x XP.
 Perks.lucky.name=Luck
-Perks.lucky.desc=Gives {0} skills and abilities a 33.3% better chance to activate.
-Perks.lucky.desc.login=Gives certain skills and abilities a 33.3% better chance to activate.
-Perks.lucky.bonus=[[GOLD]] ({0}% with Lucky Perk)
+Perks.lucky.desc=Gives {0} skills and abilities a 33.3 better chance to activate.
+Perks.lucky.desc.login=Gives certain skills and abilities a 33.3 better chance to activate.
+Perks.lucky.bonus=[[GOLD]] ({0} with Lucky Perk)
 Perks.cooldowns.name=Fast Recovery
 Perks.cooldowns.desc=Cuts cooldown duration by {0}.
 Perks.activationtime.name=Endurance
