--- a/src/main/resources/locale/locale_zh_CN.properties
+++ b/src/main/resources/locale/locale_zh_CN.properties
@@ -1,6 +1,6 @@
 Acrobatics.Ability.Proc=[[GREEN]]**\u534e\u5c14\u5179\u822c\u7684\u964d\u843d**
 Acrobatics.Combat.Proc=[[GREEN]]**\u95ea\u907f**
-Acrobatics.DodgeChance=[[RED]]Dodge Chance: [[YELLOW]]{0}%
+Acrobatics.DodgeChance=[[RED]]Dodge Chance: [[YELLOW]]{0}
 Acrobatics.Effect.0=\u7ffb\u6eda
 Acrobatics.Effect.1=\u51cf\u5c11\u6216\u8005\u53d6\u6d88\u6389\u843d\u4f24\u5bb3
 Acrobatics.Effect.2=\u4f18\u96c5\u7684\u7ffb\u6eda
@@ -8,13 +8,13 @@ Acrobatics.Effect.3=\u4e24\u500d\u7684\u7ffb\u6eda\u6548\u679c
 Acrobatics.Effect.4=\u95ea\u907f
 Acrobatics.Effect.5=\u51cf\u5c11\u4e00\u534a\u7684\u4f24\u5bb3
 Acrobatics.Listener=\u6742\u6280:(ACROBATICS)
-Acrobatics.Roll.Chance=[[RED]]Roll Chance: [[YELLOW]]{0}%
-Acrobatics.Roll.GraceChance=[[RED]]Graceful Roll Chance: [[YELLOW]]{0}%
+Acrobatics.Roll.Chance=[[RED]]Roll Chance: [[YELLOW]]{0}
+Acrobatics.Roll.GraceChance=[[RED]]Graceful Roll Chance: [[YELLOW]]{0}
 Acrobatics.Roll.Text=**\u7ffb\u6eda**
 Acrobatics.SkillName=\u6742\u6280
 Acrobatics.Skillup=[[YELLOW]]\u6742\u6280\u6280\u80fd\u4e0a\u5347\u4e86 {0}. \u603b\u7b49\u7ea7 ({1})
-Archery.Combat.DazeChance=[[RED]]Chance to Daze: [[YELLOW]]{0}%
-Archery.Combat.RetrieveChance=[[RED]]Chance to Retrieve Arrows: [[YELLOW]]{0}%
+Archery.Combat.DazeChance=[[RED]]Chance to Daze: [[YELLOW]]{0}
+Archery.Combat.RetrieveChance=[[RED]]Chance to Retrieve Arrows: [[YELLOW]]{0}
 Archery.Combat.SkillshotBonus=[[RED]]\u6280\u5de7\u5c04\u51fb\u5956\u52b1\u4f24\u5bb3: [[YELLOW]]{0}
 Archery.Effect.0=\u6280\u5de7\u5c04\u51fb
 Archery.Effect.1=\u589e\u52a0\u5f13\u7bad\u4f24\u5bb3
@@ -35,7 +35,7 @@ Axes.Ability.Lower=[[GRAY]]**\u4f60\u6536\u8d77\u4e86\u4f60\u7684\u65a7\u5934**
 Axes.Ability.Ready=[[GREEN]]**\u4f60\u63e1\u7d27\u4e86\u4f60\u7684\u65a7\u5934**
 Axes.Combat.Cleave.Proc=[[DARK_RED]]\u53d7\u5230\u5288\u88c2\u6253\u51fb!
 Axes.Combat.CritStruck=[[DARK_RED]]\u4f60\u6253\u51fa\u4e86\u66b4\u51fb!
-Axes.Combat.CritChance=[[RED]]\u66b4\u51fb\u51e0\u7387: [[YELLOW]]{0}%
+Axes.Combat.CritChance=[[RED]]\u66b4\u51fb\u51e0\u7387: [[YELLOW]]{0}
 Axes.Combat.CriticalHit=[[RED]]\u66b4\u51fb!
 Axes.Combat.GI.Proc=[[GREEN]]**\u5de8\u529b\u6253\u51fb**
 Axes.Combat.GI.Struck=[[RED]]**\u88ab\u5f3a\u70c8\u51b2\u51fb\u51fb\u4e2d**
@@ -76,7 +76,7 @@ Excavation.Skillup=[[YELLOW]]\u6316\u6398\u6280\u80fd\u63d0\u5347 {0}. \u603b\u5
 Fishing.Ability.Info=[[RED]]\u9b54\u6cd5\u730e\u4eba: [[GRAY]] ** \u968f\u7740\u5b9d\u85cf\u730e\u4eba\u7b49\u7ea7\u63d0\u9ad8  **
 Fishing.Ability.Locked.0=LOCKED UNTIL {0}+ SKILL (SHAKE)
 Fishing.Ability.Rank=[[RED]]\u5b9d\u7269\u730e\u4eba\u7b49\u7ea7: [[YELLOW]]{0}/5
-Fishing.Ability.Shake=[[RED]]Shake Chance: [[YELLOW]]{0}%
+Fishing.Ability.Shake=[[RED]]Shake Chance: [[YELLOW]]{0}
 Fishing.Ability.FD=[[RED]]Fisherman\'\'s Diet: [[YELLOW]]Rank {0}
 Fishing.Effect.0=\u5b9d\u7269\u730e\u4eba (\u88ab\u52a8\u6280\u80fd)
 Fishing.Effect.1=\u9493\u5230\u6742\u7269
@@ -92,10 +92,10 @@ Fishing.Listener=\u9493\u9c7c:
 Fishing.MagicFound=[[GRAY]]\u4f60\u611f\u5230\u4e00\u80a1\u9b54\u529b\u7684\u6ce2\u52a8...
 Fishing.SkillName=\u9493\u9c7c
 Fishing.Skillup=[[YELLOW]]\u9493\u9c7c\u6280\u80fd\u63d0\u5347\u4e86 {0}. \u603b\u5171 ({1})
-Herbalism.Ability.DoubleDropChance=[[RED]]Double Drop Chance: [[YELLOW]]{0}%
+Herbalism.Ability.DoubleDropChance=[[RED]]Double Drop Chance: [[YELLOW]]{0}
 Herbalism.Ability.FD=[[RED]]\u519c\u592b\u98df\u8c31: [[YELLOW]]\u7b49\u7ea7 {0}
 Herbalism.Ability.GTe.Length=[[RED]]\u571f\u795e\u5e87\u4f51\u6301\u7eed\u65f6\u95f4: [[YELLOW]]{0}s
-Herbalism.Ability.GTh.Chance=[[RED]]Green Thumb Chance: [[YELLOW]]{0}%
+Herbalism.Ability.GTh.Chance=[[RED]]Green Thumb Chance: [[YELLOW]]{0}
 Herbalism.Ability.GTh.Fail=[[RED]]**\u7eff\u5316\u5931\u8d25**
 Herbalism.Ability.GTh.Stage=[[RED]]Green Thumb Stage: [[YELLOW]] Crops grow in stage {0}
 Herbalism.Ability.GTh=[[GREEN]]**\u7eff\u5316**
@@ -136,7 +136,7 @@ Mining.Effect.7=\u589e\u52a0TNT\u7206\u70b8\u8303\u56f4
 Mining.Effect.8=\u7206\u7834\u4e13\u5bb6
 Mining.Effect.9=\u51cf\u5c11\u6765\u81eaTNT\u7684\u4f24\u5bb3
 Mining.Effect.Decrease=[[RED]]\u7206\u7834\u4e13\u5bb6\u4f24\u5bb3\u51cf\u5c11: [[YELLOW]]{0}
-Mining.Effect.DropChance=[[RED]]Double Drop Chance: [[YELLOW]]{0}%
+Mining.Effect.DropChance=[[RED]]Double Drop Chance: [[YELLOW]]{0}
 Mining.Listener=\u6316\u77ff:(MINING)
 Mining.SkillName=\u6316\u77ff
 Mining.Skills.SuperBreaker.Off=[[RED]]**\u8d85\u7ea7\u77ff\u5de5\u5df2\u7ed3\u675f**
@@ -146,14 +146,14 @@ Mining.Skills.SuperBreaker.Other.On=[[GREEN]]{0}[[DARK_GREEN]] \u4f7f\u7528\u4e8
 Mining.Skills.SuperBreaker.Refresh=[[GREEN]]\u4f60\u7684 [[YELLOW]]\u8d85\u7ea7\u77ff\u5de5 [[GREEN]]\u6280\u80fd\u5df2\u7ecf\u53ef\u4ee5\u518d\u6b21\u4f7f\u7528\u4e86\uff01
 Mining.Skillup=[[YELLOW]]\u6316\u77ff\u6280\u80fd\u4e0a\u5347\u4e86 {0}. \u603b\u7b49\u7ea7 ({1})
 Mining.Blast.Boom=[[GRAY]]**\u5623**
-Mining.Blast.Effect.0=+35% \u77ff\u77f3\u4ea7\u91cf
-Mining.Blast.Effect.1=+40% \u77ff\u77f3\u4ea7\u91cf
-Mining.Blast.Effect.2=+45% \u77ff\u77f3\u4ea7\u91cf, \u65e0\u788e\u7247
-Mining.Blast.Effect.3= +50% \u77ff\u7269\u4ea7\u7387, \u65e0\u788e\u7247
-Mining.Blast.Effect.4=+55% \u77ff\u7269\u4ea7\u7387, \u65e0\u788e\u7247, \u4e09\u500d\u6389\u843d
-Mining.Blast.Effect.5=+60% \u77ff\u7269\u4ea7\u7387, \u65e0\u788e\u7247, \u4e09\u500d\u6389\u843d
-Mining.Blast.Effect.6=+65% \u77ff\u7269\u4ea7\u7387, \u65e0\u788e\u7247, \u4e09\u500d\u6389\u843d
-Mining.Blast.Effect.7=+70% \u77ff\u77f3\u4ea7\u91cf,\u65e0\u788e\u7247,3\u500d\u6389\u843d
+Mining.Blast.Effect.0=+35 \u77ff\u77f3\u4ea7\u91cf
+Mining.Blast.Effect.1=+40 \u77ff\u77f3\u4ea7\u91cf
+Mining.Blast.Effect.2=+45 \u77ff\u77f3\u4ea7\u91cf, \u65e0\u788e\u7247
+Mining.Blast.Effect.3= +50 \u77ff\u7269\u4ea7\u7387, \u65e0\u788e\u7247
+Mining.Blast.Effect.4=+55 \u77ff\u7269\u4ea7\u7387, \u65e0\u788e\u7247, \u4e09\u500d\u6389\u843d
+Mining.Blast.Effect.5=+60 \u77ff\u7269\u4ea7\u7387, \u65e0\u788e\u7247, \u4e09\u500d\u6389\u843d
+Mining.Blast.Effect.6=+65 \u77ff\u7269\u4ea7\u7387, \u65e0\u788e\u7247, \u4e09\u500d\u6389\u843d
+Mining.Blast.Effect.7=+70 \u77ff\u77f3\u4ea7\u91cf,\u65e0\u788e\u7247,3\u500d\u6389\u843d
 Mining.Blast.Radius.Increase=[[RED]]\u7206\u70b8\u534a\u5f84\u63d0\u5347: [[YELLOW]]+{0}
 Mining.Blast.Rank=[[RED]]\u7206\u7834\u5f00\u91c7: [[YELLOW]] \u6392\u540d {0}/8 [[GRAY]]({1})
 Mining.Blast.Other.On=Mining.Blast.Other.On=[[GREEN]]{0}[[DARK_GREEN]] \u4f7f\u7528\u4e86 [[RED]]\u7206\u7834\u5f00\u91c7!
@@ -190,12 +190,12 @@ Repair.Skills.FeltEasy=[[GRAY]]\u90a3\u770b\u8d77\u6765\u5f88\u7b80\u5355.
 Repair.Skills.FullDurability=[[GRAY]]\u4f60\u7684\u88c5\u5907\u5df2\u7ecf\u6ee1\u8010\u4e45\u5ea6\u4e86
 Repair.Skills.SalvageSuccess=[[GRAY]]Item salvaged!
 Repair.Skills.NotFullDurability=[[DARK_RED]]You can\'t salvage damaged items.
-Repair.Skills.Mastery=[[RED]]Repair Mastery: [[YELLOW]]Extra {0}% durability restored
+Repair.Skills.Mastery=[[RED]]Repair Mastery: [[YELLOW]]Extra {0} durability restored
 Repair.Skills.StackedItems=[[DARK_RED]]\u4f60\u65e0\u6cd5\u4fee\u7406\u5df2\u53e0\u52a0\u7684\u7269\u54c1.
-Repair.Skills.Super.Chance=[[RED]]Super Repair Chance: [[YELLOW]]{0}%
+Repair.Skills.Super.Chance=[[RED]]Super Repair Chance: [[YELLOW]]{0}
 Repair.Skillup=[[YELLOW]]\u4fee\u7406\u6280\u80fd\u4e0a\u5347\u4e86 {0}. \u603b\u5171 ({1})
-Repair.Arcane.Chance.Downgrade=[[GRAY]]AF Downgrade Chance: [[YELLOW]]{0}%
-Repair.Arcane.Chance.Success=[[GRAY]]AF Success Rate: [[YELLOW]]{0}%
+Repair.Arcane.Chance.Downgrade=[[GRAY]]AF Downgrade Chance: [[YELLOW]]{0}
+Repair.Arcane.Chance.Success=[[GRAY]]AF Success Rate: [[YELLOW]]{0}
 Repair.Arcane.Downgrade=[[RED]]\u8fd9\u4ef6\u7269\u54c1\u7684\u9644\u9b54\u7b49\u7ea7\u5df2\u4e0b\u964d.
 Repair.Arcane.Fail=[[RED]]\u8fd9\u4ef6\u7269\u54c1\u7684\u9644\u9b54\u5df2\u6d88\u5931.
 Repair.Arcane.Lost=[[RED]]\u4f60\u7684\u6280\u80fd\u7b49\u7ea7\u4e0d\u8db3\u4ee5\u4fdd\u7559\u9644\u9b54\u5c5e\u6027.
@@ -203,20 +203,20 @@ Repair.Arcane.Perfect=[[GREEN]]\u4f60\u6210\u529f\u5730\u4fdd\u7559\u4e86\u8fd9\
 Repair.Arcane.Rank=[[RED]]\u79d8\u6cd5\u953b\u9020: [[YELLOW]]\u7b49\u7ea7 {0}/4
 Swords.Ability.Lower=[[GRAY]]**\u4f60\u6536\u597d\u4e86\u4f60\u7684\u5251**
 Swords.Ability.Ready=[[GREEN]]**\u4f60\u628a\u5251\u7d27\u63e1\u5728\u4e86\u624b\u4e2d**
-Swords.Combat.Bleed.Chance=[[RED]]Bleed Chance: [[YELLOW]]{0}%
+Swords.Combat.Bleed.Chance=[[RED]]Bleed Chance: [[YELLOW]]{0}
 Swords.Combat.Bleed.Length=[[RED]]\u6d41\u8840\u6301\u7eed\u65f6\u95f4: [[YELLOW]]{0} ticks
 Swords.Combat.Bleed.Note=[[GRAY]]\u6ce8\u610f: [[YELLOW]]\u6bcf\u4e24\u79d2\u51cf\u4e00\u6ef4\u8840
 Swords.Combat.Bleeding.Started=[[DARK_RED]] \u4f60\u6b63\u5728\u6d41\u8840!
 Swords.Combat.Bleeding.Stopped=[[GRAY]]\u6d41\u8840 [[GREEN]]\u5df2\u505c\u6b62[[GRAY]]!
 Swords.Combat.Bleeding=[[GREEN]]**\u654c\u4eba\u6b63\u5728\u4e0d\u65ad\u6d41\u8840**
-Swords.Combat.Counter.Chance=[[RED]]Counter Attack Chance: [[YELLOW]]{0}%
+Swords.Combat.Counter.Chance=[[RED]]Counter Attack Chance: [[YELLOW]]{0}
 Swords.Combat.Counter.Hit=[[DARK_RED]]\u4f60\u53cd\u51fb\u4e86\u5bf9\u624b!
 Swords.Combat.Countered=[[GREEN]]**\u53cd\u51fb\u4e86\u654c\u4eba**
 Swords.Combat.SS.Struck=[[DARK_RED]]\u53d1\u52a8\u952f\u9f7f\u653b\u51fb\uff01
 Swords.Effect.0=\u53cd\u51fb
-Swords.Effect.1=\u53cd\u5c04\u6240\u53d7\u5230\u768450%\u4f24\u5bb3
+Swords.Effect.1=\u53cd\u5c04\u6240\u53d7\u5230\u768450\u4f24\u5bb3
 Swords.Effect.2=\u952f\u9f7f\u653b\u51fb (\u4e3b\u52a8\u6280\u80fd)
-Swords.Effect.3=25% \u8303\u56f4\u4f24\u5bb3, \u8303\u56f4\u6d41\u8840\u4f24\u5bb3
+Swords.Effect.3=25 \u8303\u56f4\u4f24\u5bb3, \u8303\u56f4\u6d41\u8840\u4f24\u5bb3
 Swords.Effect.4=\u952f\u9f7f\u653b\u51fb\u6d41\u8840\u4f24\u5bb3\u589e\u52a0
 Swords.Effect.5=5\u70b9\u6d41\u8840\u4f24\u5bb3
 Swords.Effect.6=\u6d41\u8840
@@ -233,19 +233,19 @@ Swords.SS.Length=[[RED]]\u952f\u9f7f\u5229\u5203\u6301\u7eed\u65f6\u95f4: [[YELL
 Taming.Ability.Bonus.0=\u7075\u7334\u654f\u6377
 Taming.Ability.Bonus.1=\u72fc\u4f1a\u907f\u514d\u5371\u9669
 Taming.Ability.Bonus.2=\u539a\u5b9e\u7684\u76ae\u6bdb
-Taming.Ability.Bonus.3=\u83b7\u5f9750%\u4f24\u5bb3\u51cf\u514d\u548c\u706b\u7130\u6297\u6027
+Taming.Ability.Bonus.3=\u83b7\u5f9750\u4f24\u5bb3\u51cf\u514d\u548c\u706b\u7130\u6297\u6027
 Taming.Ability.Bonus.4=\u51b2\u51fb\u62b5\u6297
 Taming.Ability.Bonus.5=\u53ea\u4f1a\u53d7\u52301/6\u7684\u7206\u70b8\u4f24\u5bb3
 Taming.Ability.Bonus.6=\u5229\u722a
 Taming.Ability.Bonus.7=+2 \u4f24\u5bb3
 Taming.Ability.Bonus.8=\u5feb\u9910\u670d\u52a1
-Taming.Ability.Bonus.9={0}% Chance for heal on attack
+Taming.Ability.Bonus.9={0} Chance for heal on attack
 Taming.Ability.Locked.0=LOCKED UNTIL {0}+ SKILL (ENVIRONMENTALLY AWARE)
 Taming.Ability.Locked.1=LOCKED UNTIL {0}+ SKILL (THICK FUR)
 Taming.Ability.Locked.2=LOCKED UNTIL {0}+ SKILL (SHOCK PROOF)
 Taming.Ability.Locked.3=LOCKED UNTIL {0}+ SKILL (SHARPENED CLAWS)
 Taming.Ability.Locked.4=LOCKED UNTIL {0}+ SKILL (FAST FOOD SERVICE)
-Taming.Combat.Chance.Gore=[[RED]]Gore Chance: [[YELLOW]]{0}%
+Taming.Combat.Chance.Gore=[[RED]]Gore Chance: [[YELLOW]]{0}
 Taming.Effect.0=\u9a6f\u517d\u77e5\u8bc6
 Taming.Effect.1=\u7528\u9aa8\u5934\u53f3\u952e\u5355\u51fb\u72fc\u6216\u8005\u8c79\u732b\u4ee5\u68c0\u67e5\u5b83\u4eec\u7684\u72b6\u51b5
 Taming.Effect.10=\u51b2\u51fb\u62b5\u6297
@@ -274,12 +274,12 @@ Taming.Summon.Fail.Wolf=[[RED]]\u4f60\u8eab\u8fb9\u5df2\u7ecf\u62e5\u6709\u8db3\
 Unarmed.Ability.Berserk.Length=[[RED]]\u72c2\u66b4\u6301\u7eed\u65f6\u95f4: [[YELLOW]]{0}s
 Unarmed.Ability.Bonus.0=\u94c1\u8155\u6a21\u5f0f
 Unarmed.Ability.Bonus.1=\u589e\u52a0{0}\u70b9\u4f24\u5bb3
-Unarmed.Ability.Chance.ArrowDeflect=[[RED]]Arrow Deflect Chance: [[YELLOW]]{0}%
-Unarmed.Ability.Chance.Disarm=[[RED]]Disarm Chance: [[YELLOW]]{0}%
+Unarmed.Ability.Chance.ArrowDeflect=[[RED]]Arrow Deflect Chance: [[YELLOW]]{0}
+Unarmed.Ability.Chance.Disarm=[[RED]]Disarm Chance: [[YELLOW]]{0}
 Unarmed.Ability.Lower=[[GRAY]]**\u4f60\u653e\u4e0b\u4e86\u4f60\u7684\u62f3\u5934**
 Unarmed.Ability.Ready=[[GREEN]]**\u4f60\u63e1\u7d27\u4e86\u4f60\u7684\u62f3\u5934**
 Unarmed.Effect.0=\u72c2\u66b4 (\u4e3b\u52a8\u6280\u80fd)
-Unarmed.Effect.1=+50% \u4f24\u5bb3, \u80fd\u7834\u574f\u786c\u5ea6\u4f4e\u7684\u65b9\u5757
+Unarmed.Effect.1=+50 \u4f24\u5bb3, \u80fd\u7834\u574f\u786c\u5ea6\u4f4e\u7684\u65b9\u5757
 Unarmed.Effect.2=\u7f34\u68b0 (\u4ec5\u9650\u73a9\u5bb6)
 Unarmed.Effect.3=\u4f7f\u654c\u4eba\u624b\u4e2d\u6b66\u5668\u6389\u843d
 Unarmed.Effect.4=\u94c1\u8155\u6a21\u5f0f
@@ -296,7 +296,7 @@ Unarmed.Skills.Berserk.Refresh=[[GREEN]]\u4f60\u7684 [[YELLOW]]\u72c2\u66b4 [[GR
 Unarmed.Skillup=[[YELLOW]]\u5f92\u624b\u6280\u80fd\u4e0a\u5347\u4e86 {0}. \u603b\u7b49\u7ea7 ({1})
 Woodcutting.Ability.0=\u79cb\u98ce\u626b\u843d\u53f6
 Woodcutting.Ability.1=\u626b\u9664\u6811\u53f6
-Woodcutting.Ability.Chance.DDrop=[[RED]]Double Drop Chance: [[YELLOW]]{0}%
+Woodcutting.Ability.Chance.DDrop=[[RED]]Double Drop Chance: [[YELLOW]]{0}
 Woodcutting.Ability.Length=[[RED]]\u6811\u6728\u780d\u4f10\u8005\u6301\u7eed\u65f6\u95f4: [[YELLOW]]{0}\u79d2
 Woodcutting.Ability.Locked.0=LOCKED UNTIL {0}+ SKILL (LEAF BLOWER)
 Woodcutting.Effect.0=\u7cbe\u9510\u4f10\u6728\u5de5(\u6280\u80fd)
@@ -462,9 +462,9 @@ Stats.Own.Stats=[[GREEN]][mcMMO] \u7edf\u8ba1\u4fe1\u606f
 Perks.xp.name=Experience
 Perks.xp.desc=Receive {0}x XP.
 Perks.lucky.name=Luck
-Perks.lucky.desc=Gives {0} skills and abilities a 33.3% better chance to activate.
-Perks.lucky.desc.login=Gives certain skills and abilities a 33.3% better chance to activate.
-Perks.lucky.bonus=[[GOLD]] ({0}% with Lucky Perk)
+Perks.lucky.desc=Gives {0} skills and abilities a 33.3 better chance to activate.
+Perks.lucky.desc.login=Gives certain skills and abilities a 33.3 better chance to activate.
+Perks.lucky.bonus=[[GOLD]] ({0} with Lucky Perk)
 Perks.cooldowns.name=Fast Recovery
 Perks.cooldowns.desc=Cuts cooldown duration by {0}.
 Perks.activationtime.name=Endurance
